@@ -16,23 +16,6 @@
  */
 package org.apache.nifi.processors.parquet;
 
-import static org.apache.nifi.processors.hadoop.AbstractHadoopProcessor.HADOOP_FILE_URL_ATTRIBUTE;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.isNull;
-import static org.mockito.Mockito.when;
-
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.IOException;
-import java.io.OutputStream;
-import java.math.BigDecimal;
-import java.nio.charset.StandardCharsets;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
 import org.apache.avro.Conversions;
 import org.apache.avro.Schema;
 import org.apache.avro.generic.GenericArray;
@@ -47,6 +30,8 @@ import org.apache.nifi.logging.ComponentLog;
 import org.apache.nifi.parquet.ParquetTestUtils;
 import org.apache.nifi.parquet.utils.ParquetAttribute;
 import org.apache.nifi.processor.ProcessContext;
+import org.apache.nifi.processors.hadoop.AbstractFetchHDFSRecord;
+import org.apache.nifi.processors.hadoop.AbstractHadoopProcessor;
 import org.apache.nifi.processors.hadoop.record.HDFSRecordReader;
 import org.apache.nifi.reporting.InitializationException;
 import org.apache.nifi.schema.access.SchemaNotFoundException;
@@ -56,6 +41,7 @@ import org.apache.nifi.serialization.record.MockRecordWriter;
 import org.apache.nifi.serialization.record.Record;
 import org.apache.nifi.serialization.record.RecordSchema;
 import org.apache.nifi.util.MockFlowFile;
+import org.apache.nifi.util.PropertyMigrationResult;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
 import org.apache.parquet.avro.AvroParquetWriter;
@@ -69,6 +55,25 @@ import org.junit.jupiter.api.condition.JRE;
 import org.junit.jupiter.api.condition.OS;
 import org.mockito.AdditionalMatchers;
 import org.mockito.Mockito;
+
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.OutputStream;
+import java.math.BigDecimal;
+import java.nio.charset.StandardCharsets;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+
+import static org.apache.nifi.processors.hadoop.AbstractHadoopProcessor.HADOOP_FILE_URL_ATTRIBUTE;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.isNull;
+import static org.mockito.Mockito.when;
 
 @DisabledOnJre(value = { JRE.JAVA_25 }, disabledReason = "java.security.auth.Subject.getSubject() is not supported")
 @DisabledOnOs({ OS.WINDOWS })
@@ -134,7 +139,7 @@ public class FetchParquetTest {
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(FetchParquet.REL_SUCCESS, 1);
 
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_SUCCESS).get(0);
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_SUCCESS).getFirst();
         flowFile.assertAttributeEquals(FetchParquet.RECORD_COUNT_ATTR, String.valueOf(USERS));
         flowFile.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "text/plain");
         assertTrue(flowFile.getAttribute(HADOOP_FILE_URL_ATTRIBUTE).endsWith(DIRECTORY + "/" + parquetFile.getName()));
@@ -164,7 +169,7 @@ public class FetchParquetTest {
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(FetchParquet.REL_SUCCESS, 1);
 
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_SUCCESS).get(0);
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_SUCCESS).getFirst();
         flowFile.assertAttributeEquals(FetchParquet.RECORD_COUNT_ATTR, "1");
         flowFile.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "text/plain");
         assertTrue(flowFile.getAttribute(HADOOP_FILE_URL_ATTRIBUTE).endsWith(DIRECTORY + "/" + parquetFile.getName()));
@@ -193,7 +198,7 @@ public class FetchParquetTest {
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(FetchParquet.REL_SUCCESS, 1);
 
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_SUCCESS).get(0);
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_SUCCESS).getFirst();
         flowFile.assertAttributeEquals(FetchParquet.RECORD_COUNT_ATTR, "1");
         flowFile.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "text/plain");
         assertTrue(flowFile.getAttribute(HADOOP_FILE_URL_ATTRIBUTE).endsWith(DIRECTORY + "/" + parquetFile.getName()));
@@ -222,7 +227,7 @@ public class FetchParquetTest {
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(FetchParquet.REL_SUCCESS, 1);
 
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_SUCCESS).get(0);
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_SUCCESS).getFirst();
         flowFile.assertAttributeEquals(FetchParquet.RECORD_COUNT_ATTR, "1");
         flowFile.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "text/plain");
         assertTrue(flowFile.getAttribute(HADOOP_FILE_URL_ATTRIBUTE).endsWith(DIRECTORY + "/" + parquetFile.getName()));
@@ -252,7 +257,7 @@ public class FetchParquetTest {
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(FetchParquet.REL_SUCCESS, 1);
 
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_SUCCESS).get(0);
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_SUCCESS).getFirst();
         flowFile.assertAttributeEquals(FetchParquet.RECORD_COUNT_ATTR, "1");
         flowFile.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "text/plain");
         assertTrue(flowFile.getAttribute(HADOOP_FILE_URL_ATTRIBUTE).endsWith(DIRECTORY + "/" + parquetFile.getName()));
@@ -282,7 +287,7 @@ public class FetchParquetTest {
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(FetchParquet.REL_SUCCESS, 1);
 
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_SUCCESS).get(0);
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_SUCCESS).getFirst();
         flowFile.assertAttributeEquals(FetchParquet.RECORD_COUNT_ATTR, "1");
         flowFile.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "text/plain");
         assertTrue(flowFile.getAttribute(HADOOP_FILE_URL_ATTRIBUTE).endsWith(DIRECTORY + "/" + parquetFile.getName()));
@@ -313,7 +318,7 @@ public class FetchParquetTest {
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(FetchParquet.REL_SUCCESS, 1);
 
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_SUCCESS).get(0);
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_SUCCESS).getFirst();
         flowFile.assertAttributeEquals(FetchParquet.RECORD_COUNT_ATTR, "1");
         flowFile.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "text/plain");
         assertTrue(flowFile.getAttribute(HADOOP_FILE_URL_ATTRIBUTE).endsWith(DIRECTORY + "/" + parquetFile.getName()));
@@ -334,7 +339,7 @@ public class FetchParquetTest {
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(FetchParquet.REL_FAILURE, 1);
 
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_FAILURE).get(0);
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_FAILURE).getFirst();
         flowFile.assertAttributeEquals(FetchParquet.FETCH_FAILURE_REASON_ATTR, "Can not create a Path from an empty string");
         flowFile.assertContentEquals("TRIGGER");
     }
@@ -350,7 +355,7 @@ public class FetchParquetTest {
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(FetchParquet.REL_FAILURE, 1);
 
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_FAILURE).get(0);
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_FAILURE).getFirst();
         flowFile.assertAttributeEquals(FetchParquet.FETCH_FAILURE_REASON_ATTR, "File " + filename + " does not exist");
         flowFile.assertContentEquals("TRIGGER");
     }
@@ -379,7 +384,7 @@ public class FetchParquetTest {
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(FetchParquet.REL_RETRY, 1);
 
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_RETRY).get(0);
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_RETRY).getFirst();
         flowFile.assertContentEquals("TRIGGER");
     }
 
@@ -414,7 +419,7 @@ public class FetchParquetTest {
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(FetchParquet.REL_RETRY, 1);
 
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_RETRY).get(0);
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_RETRY).getFirst();
         flowFile.assertContentEquals("TRIGGER");
     }
 
@@ -446,7 +451,7 @@ public class FetchParquetTest {
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(FetchParquet.REL_RETRY, 1);
 
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_RETRY).get(0);
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(FetchParquet.REL_RETRY).getFirst();
         flowFile.assertContentEquals("TRIGGER");
     }
 
@@ -499,6 +504,30 @@ public class FetchParquetTest {
         testRunner.enqueue("TRIGGER", attributes);
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(FetchParquet.REL_SUCCESS, 1);
+    }
+
+    @Test
+    void testMigrateProperties() {
+        final TestRunner runner = TestRunners.newTestRunner(FetchParquet.class);
+        final Map<String, String> expectedRenamed = Map.ofEntries(
+                Map.entry("filename", AbstractFetchHDFSRecord.FILENAME.getName()),
+                Map.entry("record-writer", AbstractFetchHDFSRecord.RECORD_WRITER.getName()),
+                Map.entry("kerberos-user-service", AbstractHadoopProcessor.KERBEROS_USER_SERVICE.getName()),
+                Map.entry("Compression codec", AbstractHadoopProcessor.COMPRESSION_CODEC.getName())
+        );
+
+        final PropertyMigrationResult propertyMigrationResult = runner.migrateProperties();
+        assertEquals(expectedRenamed, propertyMigrationResult.getPropertiesRenamed());
+
+        final Set<String> expectedRemoved = Set.of(
+                "Kerberos Principal",
+                "Kerberos Password",
+                "Kerberos Keytab",
+                "kerberos-credentials-service",
+                "Kerberos Relogin Period"
+        );
+
+        assertEquals(expectedRemoved, propertyMigrationResult.getPropertiesRemoved());
     }
 
     protected void verifyCSVRecords(String csvContent) {
@@ -554,7 +583,6 @@ public class FetchParquetTest {
                 user.put("name", "Bob" + i);
                 user.put("favorite_number", i);
 
-
                 final GenericArray<String> colors = new GenericData.Array<>(1, favoriteColorsSchema);
                 colors.add("blue" + i);
 
@@ -581,7 +609,6 @@ public class FetchParquetTest {
                 final GenericRecord user = new GenericData.Record(schema);
                 user.put("name", "Bob" + i);
                 user.put("favorite_number", i);
-
 
                 final GenericArray<String> colors = new GenericData.Array<>(1, favoriteColorsSchema);
                 colors.add("blue" + i);
