@@ -17,6 +17,7 @@
 
 package org.apache.nifi.py4j;
 
+import org.apache.commons.codec.digest.DigestUtils;
 import org.apache.nifi.components.AsyncLoadedProcessor;
 import org.apache.nifi.components.AsyncLoadedProcessor.LoadState;
 import org.apache.nifi.components.state.Scope;
@@ -43,6 +44,8 @@ import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.api.condition.DisabledOnOs;
+import org.junit.jupiter.api.condition.EnabledIfSystemProperty;
+import org.junit.jupiter.api.condition.OS;
 
 import java.io.File;
 import java.io.FileOutputStream;
@@ -130,7 +133,6 @@ public class PythonControllerInteractionIT {
         }
     }
 
-
     @Test
     public void testStartAndStop() {
         // Do nothing. Just use the @BeforeAll / @AfterAll to handle the start & stop.
@@ -140,7 +142,6 @@ public class PythonControllerInteractionIT {
     public void testPing() throws IOException {
         bridge.ping();
     }
-
 
     @Test
     public void testGetProcessorDetails() {
@@ -180,7 +181,7 @@ public class PythonControllerInteractionIT {
     }
 
     @Test
-    @Disabled("Just for manual testing...")
+    @EnabledIfSystemProperty(named = "nifi.test.performance", matches = "true", disabledReason = "Just for manual testing...")
     public void runPrettyPrintJsonManyThreads() throws IOException {
         // Create a PrettyPrintJson Processor
         final TestRunner runner = createFlowFileTransform(PRETTY_PRINT_JSON);
@@ -198,7 +199,6 @@ public class PythonControllerInteractionIT {
         runner.assertAllFlowFilesTransferred("success", flowFileCount);
     }
 
-
     @Test
     public void testSimplePrettyPrint() throws IOException {
         // Setup
@@ -210,7 +210,7 @@ public class PythonControllerInteractionIT {
         runner.run();
         runner.assertTransferCount("original", 1);
         runner.assertTransferCount("success", 1);
-        final MockFlowFile indent2Output = runner.getFlowFilesForRelationship("success").get(0);
+        final MockFlowFile indent2Output = runner.getFlowFilesForRelationship("success").getFirst();
 
         // Validate its output
         assertNotNull(indent2Output.getAttribute("uuid"));
@@ -231,7 +231,7 @@ public class PythonControllerInteractionIT {
         runner.setProperty("Indentation", "");
         runner.assertNotValid();
 
-        runner.setProperty("Indentation", String.valueOf( ((long) Integer.MAX_VALUE) + 1 ));
+        runner.setProperty("Indentation", String.valueOf(((long) Integer.MAX_VALUE) + 1));
         runner.assertNotValid();
 
         runner.setProperty("Indentation", "4");
@@ -262,7 +262,7 @@ public class PythonControllerInteractionIT {
         runner.run();
         runner.assertTransferCount("original", 1);
         runner.assertTransferCount("success", 1);
-        runner.getFlowFilesForRelationship("success").get(0).assertContentEquals("Hola Mundo");
+        runner.getFlowFilesForRelationship("success").getFirst().assertContentEquals("Hola Mundo");
     }
 
     @Test
@@ -276,7 +276,7 @@ public class PythonControllerInteractionIT {
         runner.run();
         runner.assertTransferCount("original", 1);
         runner.assertTransferCount("success", 1);
-        final String content = runner.getFlowFilesForRelationship("success").get(0).getContent();
+        final String content = runner.getFlowFilesForRelationship("success").getFirst().getContent();
         final int resultNum = Integer.parseInt(content);
         assertTrue(resultNum >= 0);
         assertTrue(resultNum <= 1000);
@@ -299,7 +299,7 @@ public class PythonControllerInteractionIT {
 
         final List<String> dependencies = writeNumpyVersionDetails.getDependencies();
         assertEquals(1, dependencies.size());
-        assertEquals("numpy==1.25.0", dependencies.get(0));
+        assertEquals("numpy==1.25.0", dependencies.getFirst());
 
         // Setup
         final TestRunner runner = createFlowFileTransform("WriteNumpyVersion");
@@ -309,9 +309,8 @@ public class PythonControllerInteractionIT {
         runner.run();
         runner.assertTransferCount("original", 1);
         runner.assertTransferCount("success", 1);
-        runner.getFlowFilesForRelationship("success").get(0).assertContentEquals("1.25.0");
+        runner.getFlowFilesForRelationship("success").getFirst().assertContentEquals("1.25.0");
     }
-
 
     @Test
     public void testControllerService() throws InitializationException {
@@ -329,7 +328,7 @@ public class PythonControllerInteractionIT {
         runner.assertTransferCount("original", 1);
         runner.assertTransferCount("success", 1);
 
-        final MockFlowFile output = runner.getFlowFilesForRelationship("success").get(0);
+        final MockFlowFile output = runner.getFlowFilesForRelationship("success").getFirst();
         assertTrue(output.getContent().contains("123 My Street"));
     }
 
@@ -352,7 +351,7 @@ public class PythonControllerInteractionIT {
         runner.run();
         runner.assertTransferCount("original", 1);
         runner.assertTransferCount("success", 1);
-        runner.getFlowFilesForRelationship("success").get(0).assertContentEquals(originalMessage);
+        runner.getFlowFilesForRelationship("success").getFirst().assertContentEquals(originalMessage);
 
         // Wait a bit because some file systems only have second-precision timestamps so wait a little more than 1 second
         // (to account for imprecision of the Thread.sleep method) to ensure
@@ -370,7 +369,7 @@ public class PythonControllerInteractionIT {
         // Ensure that the output is correct
         runner.assertTransferCount("original", 1);
         runner.assertTransferCount("success", 1);
-        runner.getFlowFilesForRelationship("success").get(0).assertContentEquals(replacement);
+        runner.getFlowFilesForRelationship("success").getFirst().assertContentEquals(replacement);
     }
 
     private void replaceFileText(final File file, final String text, final String replacement) throws IOException {
@@ -419,7 +418,7 @@ public class PythonControllerInteractionIT {
         runnerV1.run();
         runnerV1.assertTransferCount("success", 1);
         runnerV1.assertTransferCount("original", 1);
-        runnerV1.getFlowFilesForRelationship("success").get(0).assertContentEquals("Hello, World");
+        runnerV1.getFlowFilesForRelationship("success").getFirst().assertContentEquals("Hello, World");
 
         // Create an instance of WriteMessage V2
         final TestRunner runnerV2 = createProcessor("WriteMessage", "0.0.2-SNAPSHOT");
@@ -430,7 +429,7 @@ public class PythonControllerInteractionIT {
         runnerV2.run();
         runnerV2.assertTransferCount("success", 1);
         runnerV2.assertTransferCount("original", 1);
-        runnerV2.getFlowFilesForRelationship("success").get(0).assertContentEquals("Hello, World 2");
+        runnerV2.getFlowFilesForRelationship("success").getFirst().assertContentEquals("Hello, World 2");
     }
 
     private void waitForValid(final TestRunner runner) {
@@ -464,14 +463,79 @@ public class PythonControllerInteractionIT {
         runner.assertTransferCount("success", 1);
 
         // Verify the results
-        final MockFlowFile out = runner.getFlowFilesForRelationship("success").get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship("success").getFirst();
         out.assertContentEquals("""
             [{"name":"Jane Doe","number":"8"}]""");
     }
 
+    @Test
+    public void testHashRecordFieldHappyPath() throws InitializationException {
+        final TestRunner runner = createRecordTransformRunner("HashRecordField");
+        runner.setProperty("Record Path", "my.example");
+
+        final String json = "[{\"foo\":\"foo\",\"my\":{\"example\":\"value\"}}]";
+        runner.enqueue(json);
+        waitForValid(runner);
+        runner.run();
+
+        runner.assertTransferCount("success", 1);
+        runner.assertTransferCount("original", 1);
+        final MockFlowFile out = runner.getFlowFilesForRelationship("success").getFirst();
+        final String expectedHash = DigestUtils.sha256Hex("value");
+        out.assertContentEquals("[{\"foo\":\"foo\",\"my\":{\"example\":\"" + expectedHash + "\"}}]");
+    }
+
+    @Test
+    public void testHashRecordFieldMissingField() throws InitializationException {
+        final TestRunner runner = createRecordTransformRunner("HashRecordField");
+        runner.setProperty("Record Path", "does.not.exist");
+
+        final String json = "[{\"foo\":\"foo\",\"my\":{\"example\":\"value\"}}]";
+        runner.enqueue(json);
+        waitForValid(runner);
+        runner.run();
+
+        runner.assertTransferCount("success", 1);
+        runner.assertTransferCount("original", 1);
+        final MockFlowFile out = runner.getFlowFilesForRelationship("success").getFirst();
+        out.assertContentEquals("[{\"foo\":\"foo\",\"my\":{\"example\":\"value\"}}]");
+    }
+
+    @Test
+    public void testHashRecordFieldNonScalar() throws InitializationException {
+        final TestRunner runner = createRecordTransformRunner("HashRecordField");
+        runner.setProperty("Record Path", "my");
+
+        final String json = "[{\"foo\":\"foo\",\"my\":{\"example\":\"value\"}}]";
+        runner.enqueue(json);
+        waitForValid(runner);
+        runner.run();
+
+        runner.assertTransferCount("success", 1);
+        runner.assertTransferCount("original", 1);
+        final MockFlowFile out = runner.getFlowFilesForRelationship("success").getFirst();
+        out.assertContentEquals("[{\"foo\":\"foo\",\"my\":{\"example\":\"value\"}}]");
+    }
+
+    @Test
+    public void testHashRecordFieldLongValue() throws InitializationException {
+        final TestRunner runner = createRecordTransformRunner("HashRecordField");
+        runner.setProperty("Record Path", "count");
+
+        final String json = "[{\"count\":7}]";
+        runner.enqueue(json);
+        waitForValid(runner);
+        runner.run();
+
+        runner.assertTransferCount("success", 1);
+        runner.assertTransferCount("original", 1);
+        final MockFlowFile out = runner.getFlowFilesForRelationship("success").getFirst();
+        final String expectedHash = DigestUtils.sha256Hex("7");
+        out.assertContentEquals("[{\"count\":\"" + expectedHash + "\"}]");
+    }
 
     private TestRunner createRecordTransformRunner(final String type) throws InitializationException {
-        final TestRunner runner = createProcessor("SetRecordField");
+        final TestRunner runner = createProcessor(type);
         runner.setValidateExpressionUsage(false);
 
         final JsonTreeReader reader = new JsonTreeReader();
@@ -501,11 +565,10 @@ public class PythonControllerInteractionIT {
         // Verify the results
         runner.assertTransferCount("success", 1);
         runner.assertTransferCount("original", 1);
-        final MockFlowFile out = runner.getFlowFilesForRelationship("success").get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship("success").getFirst();
         out.assertContentEquals("""
             [{"name":"Jane Doe","father":{"name":"John Doe"}}]""");
     }
-
 
     @Test
     public void testCustomRelationships() {
@@ -527,14 +590,14 @@ public class PythonControllerInteractionIT {
         runner.assertTransferCount("large", 1);
         runner.assertTransferCount("failure", 0);
         final FlowFile largeOutputFlowFile = runner.getFlowFilesForRelationship("large").getFirst();
-        assertEquals(largeInputFlowFile.getId(), largeOutputFlowFile.getId(), "Large Transformed Flow File should be the same as inbound");
+        assertEquals(largeInputFlowFile.getId(), largeOutputFlowFile.getId(), "Large Transformed FlowFile should be the same as inbound");
         final FlowFile smallOutputFlowFile = runner.getFlowFilesForRelationship("small").getFirst();
-        assertEquals(smallInputFlowFile.getId(), smallOutputFlowFile.getId(), "Small Transformed Flow File should be the same as inbound");
+        assertEquals(smallInputFlowFile.getId(), smallOutputFlowFile.getId(), "Small Transformed FlowFile should be the same as inbound");
     }
 
     @Test
     @Timeout(45)
-    @DisabledOnOs(org.junit.jupiter.api.condition.OS.WINDOWS) // Cannot run on windows because ExitAfterFourInvocations uses `kill -9` command
+    @DisabledOnOs(value = OS.WINDOWS, disabledReason = "Cannot run on windows because ExitAfterFourInvocations uses `kill -9` command")
     public void testProcessRestarted() {
         final TestRunner runner = createFlowFileTransform("ExitAfterFourInvocations");
 
@@ -546,7 +609,7 @@ public class PythonControllerInteractionIT {
         assertThrows(Throwable.class, runner::run);
 
         // Run 2 additional times. Because the Python Process will have to be restarted, it may take a bit,
-        // so we keep trying until we succeed, relying on the 15 second timeout for the test to fail us if
+        // so we keep trying until we succeed, relying on the 15-second timeout for the test to fail us if
         // the Process doesn't get restarted in time.
         for (int i = 0; i < 2; i++) {
             while (true) {
@@ -568,7 +631,6 @@ public class PythonControllerInteractionIT {
 
         runner.assertTransferCount("success", 7);
     }
-
 
     @Test
     public void testRouteToFailureWithAttributes() {
@@ -649,7 +711,7 @@ public class PythonControllerInteractionIT {
         // The processor reads the state and adds the key-value pairs
         // to the FlowFile as attributes.
         stateManager.assertStateEquals(Map.of("state_key_1", "state_value_1"), Scope.CLUSTER);
-        final MockFlowFile flowFile = runner.getFlowFilesForRelationship("success").get(0);
+        final MockFlowFile flowFile = runner.getFlowFilesForRelationship("success").getFirst();
         flowFile.assertAttributeEquals("state_key_1", "state_value_1");
     }
 
@@ -661,7 +723,7 @@ public class PythonControllerInteractionIT {
 
         runner.run();
 
-        final Map finalState = Map.of("state_key_2", "state_value_2");
+        final Map<String, String> finalState = Map.of("state_key_2", "state_value_2");
         stateManager.assertStateEquals(finalState, Scope.CLUSTER);
         runner.assertTransferCount("success", 1);
     }
@@ -691,7 +753,7 @@ public class PythonControllerInteractionIT {
         runner.run();
 
         runner.assertTransferCount("success", 1);
-        runner.getFlowFilesForRelationship("success").get(0).assertAttributeEquals("exception_msg", "Set state failed");
+        runner.getFlowFilesForRelationship("success").getFirst().assertAttributeEquals("exception_msg", "Set state failed");
     }
 
     public interface StringLookupService extends ControllerService {
@@ -760,19 +822,44 @@ public class PythonControllerInteractionIT {
 
         final TestRunner runner = createProcessor(processorName);
 
-        propertiesWithValues.forEach((propertyName, propertyValue) -> {
-            runner.setProperty(propertyName, propertyValue);
-        });
+        propertiesWithValues.forEach(runner::setProperty);
 
         waitForValid(runner);
         runner.run();
 
-        relationshipsWithFlowFileCounts.forEach((relationship, count) -> {
-            runner.assertTransferCount(relationship, count);
-        });
+        relationshipsWithFlowFileCounts.forEach(runner::assertTransferCount);
 
-        final MockFlowFile output = runner.getFlowFilesForRelationship(expectedOuputRelationship).get(0);
+        final MockFlowFile output = runner.getFlowFilesForRelationship(expectedOuputRelationship).getFirst();
         output.assertContentEquals(expectedContent);
+    }
+
+    @Test
+    public void testConditionalProcessorWithDependencies() {
+        final TestRunner runner = createFlowFileTransform("ConditionalProcessor");
+
+        // Text mode with uppercase dependency
+        runner.setProperty("Output Mode", "text");
+        runner.setProperty("Uppercase", "true");
+        runner.setProperty("Payload Text", "${filename}");
+        runner.enqueue("body", Map.of("filename", "nifi"));
+        runner.run();
+
+        runner.assertTransferCount("success", 1);
+        MockFlowFile textOutput = runner.getFlowFilesForRelationship("success").getFirst();
+        textOutput.assertContentEquals("NIFI");
+        textOutput.assertAttributeEquals("output.mode", "text");
+
+        // Reset and exercise JSON branch (requires JSON Field Name dependency)
+        runner.clearTransferState();
+        runner.setProperty("Output Mode", "json");
+        runner.setProperty("JSON Field Name", "msg");
+        runner.enqueue("body", Map.of("filename", "payload"));
+        runner.run();
+
+        runner.assertTransferCount("success", 1);
+        MockFlowFile jsonOutput = runner.getFlowFilesForRelationship("success").getFirst();
+        jsonOutput.assertContentEquals("{\"msg\": \"payload\"}");
+        jsonOutput.assertAttributeEquals("output.mode", "json");
     }
 
     private TestRunner createStateManagerTesterProcessor(String methodToTest) {
@@ -784,7 +871,7 @@ public class PythonControllerInteractionIT {
 
     private MockStateManager initializeStateManager(TestRunner runner) throws IOException {
         final MockStateManager stateManager = runner.getStateManager();
-        final Map initialState = Map.of("state_key_1", "state_value_1");
+        final Map<String, String> initialState = Map.of("state_key_1", "state_value_1");
         stateManager.setState(initialState, Scope.CLUSTER);
         return stateManager;
     }
