@@ -24,9 +24,9 @@ import org.apache.nifi.json.JsonRecordSetWriter;
 import org.apache.nifi.json.JsonTreeReader;
 import org.apache.nifi.json.JsonTreeRowRecordReader;
 import org.apache.nifi.logging.ComponentLog;
+import org.apache.nifi.processors.standard.util.JsonUtil;
 import org.apache.nifi.reporting.InitializationException;
 import org.apache.nifi.schema.access.SchemaAccessUtils;
-import org.apache.nifi.schema.access.SchemaNotFoundException;
 import org.apache.nifi.serialization.MalformedRecordException;
 import org.apache.nifi.serialization.RecordReader;
 import org.apache.nifi.serialization.RecordReaderFactory;
@@ -37,27 +37,30 @@ import org.apache.nifi.serialization.record.RecordField;
 import org.apache.nifi.serialization.record.RecordFieldType;
 import org.apache.nifi.serialization.record.RecordSchema;
 import org.apache.nifi.util.MockFlowFile;
+import org.apache.nifi.util.PropertyMigrationResult;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.condition.DisabledOnOs;
-import org.junit.jupiter.api.condition.OS;
 
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 
-@DisabledOnOs(value = OS.WINDOWS, disabledReason = "Pretty printing is not portable as these fail on windows")
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
 public class TestForkRecord {
 
     private final String dateFormat = RecordFieldType.DATE.getDefaultFormat();
     private final String timeFormat = RecordFieldType.TIME.getDefaultFormat();
     private final String timestampFormat = RecordFieldType.TIMESTAMP.getDefaultFormat();
+    private TestRunner runner;
 
     private List<RecordField> getDefaultFields() {
         final List<RecordField> fields = new ArrayList<>();
@@ -97,10 +100,13 @@ public class TestForkRecord {
         return new SimpleRecordSchema(transactionFields);
     }
 
-    @Test
-    public void testForkExtractSimpleWithoutParentFields() throws IOException, MalformedRecordException, InitializationException {
-        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
+    @BeforeEach
+    void setUp() {
+        runner = TestRunners.newTestRunner(ForkRecord.class);
+    }
 
+    @Test
+    public void testForkExtractSimpleWithoutParentFields() throws IOException, InitializationException {
         final DataType accountRecordType = RecordFieldType.RECORD.getRecordDataType(getAccountSchema());
         final DataType accountsType = RecordFieldType.ARRAY.getArrayDataType(accountRecordType);
 
@@ -126,15 +132,13 @@ public class TestForkRecord {
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
 
-        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0);
+        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst();
         mff.assertAttributeEquals("record.count", "2");
         mff.assertContentEquals("header\n42,4750.89\n43,48212.38\n");
     }
 
     @Test
-    public void testForkExtractSimpleWithParentFields() throws IOException, MalformedRecordException, InitializationException {
-        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
-
+    public void testForkExtractSimpleWithParentFields() throws IOException, InitializationException {
         final DataType accountRecordType = RecordFieldType.RECORD.getRecordDataType(getAccountSchema());
         final DataType accountsType = RecordFieldType.ARRAY.getArrayDataType(accountRecordType);
 
@@ -165,15 +169,13 @@ public class TestForkRecord {
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
 
-        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0);
+        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst();
         mff.assertAttributeEquals("record.count", "2");
         mff.assertContentEquals("header\n42,John Doe,123 My Street,My City,MS,11111,USA,4750.89\n43,John Doe,123 My Street,My City,MS,11111,USA,48212.38\n");
     }
 
     @Test
-    public void testForkExtractNotAnArray() throws IOException, MalformedRecordException, InitializationException {
-        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
-
+    public void testForkExtractNotAnArray() throws IOException, InitializationException {
         final DataType accountRecordType = RecordFieldType.RECORD.getRecordDataType(getAccountSchema());
         final DataType accountsType = RecordFieldType.ARRAY.getArrayDataType(accountRecordType);
 
@@ -204,14 +206,12 @@ public class TestForkRecord {
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
 
-        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0);
+        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst();
         mff.assertAttributeEquals("record.count", "0");
     }
 
     @Test
-    public void testForkExtractNotAnArrayOfRecords() throws IOException, MalformedRecordException, InitializationException {
-        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
-
+    public void testForkExtractNotAnArrayOfRecords() throws IOException, InitializationException {
         final DataType accountRecordType = RecordFieldType.STRING.getDataType();
         final DataType accountsType = RecordFieldType.ARRAY.getArrayDataType(accountRecordType);
 
@@ -242,14 +242,12 @@ public class TestForkRecord {
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
 
-        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0);
+        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst();
         mff.assertAttributeEquals("record.count", "0");
     }
 
     @Test
-    public void testForkExtractComplexWithParentFields() throws IOException, MalformedRecordException, InitializationException {
-        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
-
+    public void testForkExtractComplexWithParentFields() throws IOException, InitializationException {
         final DataType accountRecordType = RecordFieldType.RECORD.getRecordDataType(getAccountWithTransactionSchema());
         final DataType accountsType = RecordFieldType.ARRAY.getArrayDataType(accountRecordType);
 
@@ -281,16 +279,19 @@ public class TestForkRecord {
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
 
-        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0);
+        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst();
         mff.assertAttributeEquals("record.count", "4");
-        mff.assertContentEquals("header\n5,John Doe,123 My Street,My City,MS,11111,USA,4750.89,150.31\n6,John Doe,123 My Street,My City,MS,11111,USA,4750.89,-15.31\n"
-                + "7,John Doe,123 My Street,My City,MS,11111,USA,48212.38,36.78\n8,John Doe,123 My Street,My City,MS,11111,USA,48212.38,-21.34\n");
+        mff.assertContentEquals("""
+                header
+                5,John Doe,123 My Street,My City,MS,11111,USA,4750.89,150.31
+                6,John Doe,123 My Street,My City,MS,11111,USA,4750.89,-15.31
+                7,John Doe,123 My Street,My City,MS,11111,USA,48212.38,36.78
+                8,John Doe,123 My Street,My City,MS,11111,USA,48212.38,-21.34
+                """);
     }
 
     @Test
-    public void testForkExtractComplexWithoutParentFields() throws IOException, MalformedRecordException, InitializationException {
-        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
-
+    public void testForkExtractComplexWithoutParentFields() throws IOException, InitializationException {
         final DataType accountRecordType = RecordFieldType.RECORD.getRecordDataType(getAccountWithTransactionSchema());
         final DataType accountsType = RecordFieldType.ARRAY.getArrayDataType(accountRecordType);
 
@@ -322,15 +323,13 @@ public class TestForkRecord {
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
 
-        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0);
+        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst();
         mff.assertAttributeEquals("record.count", "4");
         mff.assertContentEquals("header\n5,150.31\n6,-15.31\n7,36.78\n8,-21.34\n");
     }
 
     @Test
-    public void testForkExtractComplexWithParentFieldsAndNull() throws IOException, MalformedRecordException, InitializationException {
-        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
-
+    public void testForkExtractComplexWithParentFieldsAndNull() throws IOException, InitializationException {
         final DataType accountRecordType = RecordFieldType.RECORD.getRecordDataType(getAccountWithTransactionSchema());
         final DataType accountsType = RecordFieldType.ARRAY.getArrayDataType(accountRecordType);
 
@@ -362,21 +361,25 @@ public class TestForkRecord {
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
 
-        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0);
+        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst();
         mff.assertAttributeEquals("record.count", "4");
-        mff.assertContentEquals("header\n5,John Doe,123 My Street,My City,MS,11111,USA,4750.89,150.31\n6,John Doe,123 My Street,My City,MS,11111,USA,4750.89,-15.31\n"
-                + "7,John Doe,123 My Street,My City,MS,11111,USA,48212.38,36.78\n8,John Doe,123 My Street,My City,MS,11111,USA,48212.38,-21.34\n");
+        mff.assertContentEquals("""
+                header
+                5,John Doe,123 My Street,My City,MS,11111,USA,4750.89,150.31
+                6,John Doe,123 My Street,My City,MS,11111,USA,4750.89,-15.31
+                7,John Doe,123 My Street,My City,MS,11111,USA,48212.38,36.78
+                8,John Doe,123 My Street,My City,MS,11111,USA,48212.38,-21.34
+                """);
     }
 
     @Test
     public void testSplitMode() throws InitializationException, IOException {
-        String expectedOutput = null;
-        final TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
         final JsonTreeReader jsonReader = new JsonTreeReader();
         runner.addControllerService("record-reader", jsonReader);
 
-        final String inputSchemaText = new String(Files.readAllBytes(Paths.get("src/test/resources/TestForkRecord/schema/schema.avsc")));
-        final String outputSchemaText = new String(Files.readAllBytes(Paths.get("src/test/resources/TestForkRecord/schema/schema.avsc")));
+        final Path schemaFile = Paths.get("src/test/resources/TestForkRecord/schema/schema.avsc");
+        final String inputSchemaText = new String(Files.readAllBytes(schemaFile));
+        final String outputSchemaText = new String(Files.readAllBytes(schemaFile));
 
         runner.setProperty(jsonReader, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(jsonReader, SchemaAccessUtils.SCHEMA_TEXT, inputSchemaText);
@@ -384,6 +387,7 @@ public class TestForkRecord {
         runner.setProperty(ForkRecord.RECORD_READER, "record-reader");
 
         final JsonRecordSetWriter jsonWriter = new JsonRecordSetWriter();
+        final Path complexInputJson = Paths.get("src/test/resources/TestForkRecord/input/complex-input-json.json");
         runner.addControllerService("record-writer", jsonWriter);
         runner.setProperty(jsonWriter, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.SCHEMA_TEXT_PROPERTY);
         runner.setProperty(jsonWriter, SchemaAccessUtils.SCHEMA_TEXT, outputSchemaText);
@@ -395,29 +399,27 @@ public class TestForkRecord {
         runner.setProperty(ForkRecord.MODE, ForkRecord.MODE_SPLIT);
 
         runner.setProperty("my-path", "/address");
-        runner.enqueue(Paths.get("src/test/resources/TestForkRecord/input/complex-input-json.json"));
+        runner.enqueue(complexInputJson);
         runner.run();
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
-        expectedOutput = new String(Files.readAllBytes(Paths.get("src/test/resources/TestForkRecord/output/split-address.json")));
-        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0).assertContentEquals(expectedOutput);
-        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0).assertAttributeEquals("record.count", "5");
+        String expectedContent = JsonUtil.getExpectedContent(Paths.get("src/test/resources/TestForkRecord/output/split-address.json"));
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertContentEquals(expectedContent);
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertAttributeEquals("record.count", "5");
 
         runner.clearTransferState();
         runner.setProperty("my-path", "/bankAccounts[*]/last5Transactions");
-        runner.enqueue(Paths.get("src/test/resources/TestForkRecord/input/complex-input-json.json"));
+        runner.enqueue(complexInputJson);
         runner.run();
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
-        expectedOutput = new String(Files.readAllBytes(Paths.get("src/test/resources/TestForkRecord/output/split-transactions.json")));
-        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0).assertContentEquals(expectedOutput);
-        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0).assertAttributeEquals("record.count", "6");
+        expectedContent = JsonUtil.getExpectedContent(Paths.get("src/test/resources/TestForkRecord/output/split-transactions.json"));
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertContentEquals(expectedContent);
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertAttributeEquals("record.count", "6");
     }
 
     @Test
     public void testExtractMode() throws InitializationException, IOException {
-        String expectedOutput = null;
-        final TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
         final JsonTreeReader jsonReader = new JsonTreeReader();
         runner.addControllerService("record-reader", jsonReader);
 
@@ -446,9 +448,112 @@ public class TestForkRecord {
         runner.run();
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
-        expectedOutput = new String(Files.readAllBytes(Paths.get("src/test/resources/TestForkRecord/output/extract-transactions.json")));
-        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0).assertContentEquals(expectedOutput);
-        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0).assertAttributeEquals("record.count", "6");
+        String expectedContent = JsonUtil.getExpectedContent(Paths.get("src/test/resources/TestForkRecord/output/extract-transactions.json"));
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertContentEquals(expectedContent);
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertAttributeEquals("record.count", "6");
+    }
+
+    @Test
+    public void testExtractWithParentFieldsAndInferredSchema() throws Exception {
+        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
+
+        final JsonTreeReader jsonReader = new JsonTreeReader();
+        runner.addControllerService("record-reader", jsonReader);
+        runner.enableControllerService(jsonReader);
+
+        final JsonRecordSetWriter jsonWriter = new JsonRecordSetWriter();
+        runner.addControllerService("record-writer", jsonWriter);
+        runner.setProperty(jsonWriter, "Pretty Print JSON", "true");
+        runner.enableControllerService(jsonWriter);
+
+        runner.setProperty(ForkRecord.RECORD_READER, "record-reader");
+        runner.setProperty(ForkRecord.RECORD_WRITER, "record-writer");
+        runner.setProperty(ForkRecord.MODE, ForkRecord.MODE_EXTRACT);
+        runner.setProperty(ForkRecord.INCLUDE_PARENT_FIELDS, "true");
+        runner.setProperty("bankAccounts", "/bankAccounts");
+
+        runner.enqueue(Paths.get("src/test/resources/TestForkRecord/input/complex-input-json-for-inference.json"));
+        runner.run();
+
+        runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
+        runner.assertTransferCount(ForkRecord.REL_FORK, 1);
+
+        final String expectedOutput = JsonUtil.getExpectedContent(Paths.get("src/test/resources/TestForkRecord/output/extract-bank-accounts-with-parents.json"));
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertAttributeEquals("record.count", "5");
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertContentEquals(expectedOutput);
+    }
+
+    @Test
+    public void testExtractFieldsAndInferredSchema() throws Exception {
+        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
+
+        final JsonTreeReader jsonReader = new JsonTreeReader();
+        runner.addControllerService("record-reader", jsonReader);
+        runner.enableControllerService(jsonReader);
+
+        final JsonRecordSetWriter jsonWriter = new JsonRecordSetWriter();
+        runner.addControllerService("record-writer", jsonWriter);
+        runner.setProperty(jsonWriter, "Pretty Print JSON", "true");
+        runner.enableControllerService(jsonWriter);
+
+        runner.setProperty(ForkRecord.RECORD_READER, "record-reader");
+        runner.setProperty(ForkRecord.RECORD_WRITER, "record-writer");
+        runner.setProperty(ForkRecord.MODE, ForkRecord.MODE_EXTRACT);
+        runner.setProperty(ForkRecord.INCLUDE_PARENT_FIELDS, "false");
+        runner.setProperty("address", "/address");
+
+        runner.enqueue(Paths.get("src/test/resources/TestForkRecord/input/complex-input-json-for-inference.json"));
+        runner.run();
+
+        runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
+        runner.assertTransferCount(ForkRecord.REL_FORK, 1);
+
+        final String expectedOutput = JsonUtil.getExpectedContent(Paths.get("src/test/resources/TestForkRecord/output/extract-address-without-parents.json"));
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertAttributeEquals("record.count", "5");
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertContentEquals(expectedOutput);
+    }
+
+    @Test
+    public void testExtractFieldsWithParentsAndFieldConflictAndInferredSchema() throws Exception {
+        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
+
+        final JsonTreeReader jsonReader = new JsonTreeReader();
+        runner.addControllerService("record-reader", jsonReader);
+        runner.enableControllerService(jsonReader);
+
+        final JsonRecordSetWriter jsonWriter = new JsonRecordSetWriter();
+        runner.addControllerService("record-writer", jsonWriter);
+        runner.setProperty(jsonWriter, "Pretty Print JSON", "true");
+        runner.enableControllerService(jsonWriter);
+
+        runner.setProperty(ForkRecord.RECORD_READER, "record-reader");
+        runner.setProperty(ForkRecord.RECORD_WRITER, "record-writer");
+        runner.setProperty(ForkRecord.MODE, ForkRecord.MODE_EXTRACT);
+        runner.setProperty(ForkRecord.INCLUDE_PARENT_FIELDS, "true");
+        runner.setProperty("address", "/address");
+
+        runner.enqueue(Paths.get("src/test/resources/TestForkRecord/input/complex-input-json-for-inference.json"));
+        runner.run();
+
+        runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
+        runner.assertTransferCount(ForkRecord.REL_FORK, 1);
+
+        final String expectedOutput = JsonUtil.getExpectedContent(Paths.get("src/test/resources/TestForkRecord/output/extract-address-with-parents.json"));
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertAttributeEquals("record.count", "5");
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertContentEquals(expectedOutput);
+    }
+
+    @Test
+    void testMigrateProperties() {
+        final Map<String, String> expectedRenamed = Map.of(
+                "record-reader", ForkRecord.RECORD_READER.getName(),
+                "record-writer", ForkRecord.RECORD_WRITER.getName(),
+                "fork-mode", ForkRecord.MODE.getName(),
+                "include-parent-fields", ForkRecord.INCLUDE_PARENT_FIELDS.getName()
+        );
+
+        final PropertyMigrationResult propertyMigrationResult = runner.migrateProperties();
+        assertEquals(expectedRenamed, propertyMigrationResult.getPropertiesRenamed());
     }
 
     private class JsonRecordReader extends AbstractControllerService implements RecordReaderFactory {
@@ -473,7 +578,7 @@ public class TestForkRecord {
         }
     }
 
-    private class CustomRecordWriter extends MockRecordWriter {
+    private static class CustomRecordWriter extends MockRecordWriter {
 
         RecordSchema schema;
 
@@ -483,7 +588,7 @@ public class TestForkRecord {
         }
 
         @Override
-        public RecordSchema getSchema(Map<String, String> variables, RecordSchema readSchema) throws SchemaNotFoundException, IOException {
+        public RecordSchema getSchema(Map<String, String> variables, RecordSchema readSchema) {
             return this.schema;
         }
 
