@@ -35,6 +35,7 @@ import org.apache.nifi.serialization.record.RecordField;
 import org.apache.nifi.serialization.record.RecordFieldType;
 import org.apache.nifi.serialization.record.RecordSchema;
 import org.apache.nifi.util.MockFlowFile;
+import org.apache.nifi.util.PropertyMigrationResult;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
 import org.junit.jupiter.api.BeforeEach;
@@ -59,12 +60,11 @@ public class TestLookupRecord {
     private TestRunner runner;
     private MapLookup lookupService;
     private MockRecordParser recordReader;
-    private MockRecordWriter recordWriter;
 
     @BeforeEach
     public void setup() throws InitializationException {
         recordReader = new MockRecordParser();
-        recordWriter = new MockRecordWriter(null, false);
+        MockRecordWriter recordWriter = new MockRecordWriter(null, false);
         lookupService = new MapLookup();
 
         runner = TestRunners.newTestRunner(LookupRecord.class);
@@ -90,7 +90,6 @@ public class TestLookupRecord {
         recordReader.addRecord("Jane Doe", 47, null, null);
         recordReader.addRecord("Jimmy Doe", 14, null, null);
     }
-
 
     private void setupForRootElement() throws InitializationException {
         lookupService.addValue("file1.txt", "text/plain");
@@ -394,8 +393,7 @@ public class TestLookupRecord {
         attrs.put("schema.name", "person");
         attrs.put("something_something", "test");
 
-        Map<String, Object> expected = new HashMap<>();
-        expected.putAll(attrs);
+        Map<String, Object> expected = new HashMap<>(attrs);
 
         lookupService.setExpectedContext(expected);
 
@@ -407,7 +405,7 @@ public class TestLookupRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(LookupRecord.REL_MATCHED, 1);
-        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).getFirst();
 
         out.assertAttributeEquals("record.count", "3");
         out.assertAttributeEquals("mime.type", "text/plain");
@@ -424,7 +422,7 @@ public class TestLookupRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(LookupRecord.REL_MATCHED, 1);
-        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).getFirst();
 
         out.assertAttributeEquals("record.count", "3");
         out.assertAttributeEquals("mime.type", "text/plain");
@@ -447,7 +445,7 @@ public class TestLookupRecord {
 
         runner.assertTransferCount(LookupRecord.REL_MATCHED, 1);
         runner.assertTransferCount(LookupRecord.REL_UNMATCHED, 1);
-        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).getFirst();
 
         out.assertAttributeEquals("record.count", "1");
         out.assertAttributeEquals("mime.type", "text/plain");
@@ -461,7 +459,7 @@ public class TestLookupRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(LookupRecord.REL_UNMATCHED, 1);
-        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_UNMATCHED).get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_UNMATCHED).getFirst();
 
         out.assertAttributeEquals("record.count", "3");
         out.assertAttributeEquals("mime.type", "text/plain");
@@ -480,12 +478,12 @@ public class TestLookupRecord {
         runner.assertTransferCount(LookupRecord.REL_MATCHED, 1);
         runner.assertTransferCount(LookupRecord.REL_UNMATCHED, 1);
 
-        final MockFlowFile matched = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).get(0);
+        final MockFlowFile matched = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).getFirst();
         matched.assertAttributeEquals("record.count", "2");
         matched.assertAttributeEquals("mime.type", "text/plain");
         matched.assertContentEquals("John Doe,48,Soccer\nJimmy Doe,14,Football\n");
 
-        final MockFlowFile unmatched = runner.getFlowFilesForRelationship(LookupRecord.REL_UNMATCHED).get(0);
+        final MockFlowFile unmatched = runner.getFlowFilesForRelationship(LookupRecord.REL_UNMATCHED).getFirst();
         unmatched.assertAttributeEquals("record.count", "1");
         unmatched.assertAttributeEquals("mime.type", "text/plain");
         unmatched.assertContentEquals("Jane Doe,47,\n");
@@ -503,12 +501,11 @@ public class TestLookupRecord {
         runner.assertTransferCount(LookupRecord.REL_FAILURE, 0);
         runner.assertTransferCount(LookupRecord.REL_SUCCESS, 1);
 
-        final MockFlowFile matched = runner.getFlowFilesForRelationship(LookupRecord.REL_SUCCESS).get(0);
+        final MockFlowFile matched = runner.getFlowFilesForRelationship(LookupRecord.REL_SUCCESS).getFirst();
         matched.assertAttributeEquals("record.count", "3");
         matched.assertAttributeEquals("mime.type", "text/plain");
         matched.assertContentEquals("John Doe,48,\nJane Doe,47,Soccer\nJimmy Doe,14,Football\n");
     }
-
 
     @Test
     public void testResultPathNotFound() {
@@ -522,7 +519,7 @@ public class TestLookupRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(LookupRecord.REL_MATCHED, 1);
-        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).getFirst();
 
         out.assertAttributeEquals("record.count", "3");
         out.assertAttributeEquals("mime.type", "text/plain");
@@ -537,7 +534,7 @@ public class TestLookupRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(LookupRecord.REL_UNMATCHED, 1);
-        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_UNMATCHED).get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_UNMATCHED).getFirst();
 
         out.assertAttributeEquals("record.count", "3");
         out.assertAttributeEquals("mime.type", "text/plain");
@@ -552,7 +549,7 @@ public class TestLookupRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(LookupRecord.REL_FAILURE, 1);
-        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_FAILURE).get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_FAILURE).getFirst();
         out.assertAttributeNotExists("record.count");
         out.assertContentEquals("");
     }
@@ -569,13 +566,12 @@ public class TestLookupRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(LookupRecord.REL_MATCHED, 1);
-        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).getFirst();
 
         out.assertAttributeEquals("record.count", "3");
         out.assertAttributeEquals("mime.type", "text/plain");
         out.assertContentEquals("John Doe,48,\nJane Doe,47,\nJimmy Doe,14,\n");
     }
-
 
     @Test
     public void testMultipleLookupPaths() {
@@ -589,7 +585,7 @@ public class TestLookupRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(LookupRecord.REL_UNMATCHED, 1);
-        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_UNMATCHED).get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_UNMATCHED).getFirst();
 
         out.assertAttributeEquals("record.count", "3");
         out.assertAttributeEquals("mime.type", "text/plain");
@@ -608,7 +604,6 @@ public class TestLookupRecord {
         runner.setProperty("lookup", "/name");
         runner.assertValid();
     }
-
 
     @Test
     public void testAddFieldsToExistingRecord() throws InitializationException {
@@ -645,7 +640,7 @@ public class TestLookupRecord {
         runner.enqueue("");
         runner.run();
 
-        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).getFirst();
         out.assertContentEquals("John Doe,48,basketball,soccer\n");
     }
 
@@ -687,7 +682,7 @@ public class TestLookupRecord {
         runner.enqueue("");
         runner.run();
 
-        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).getFirst();
 
         // We can't be sure of the order of the fields in the record, so we allow either 'least' or 'favorite' to be first
         final String outputContents = new String(out.toByteArray());
@@ -733,7 +728,7 @@ public class TestLookupRecord {
         runner.enqueue("");
         runner.run();
 
-        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).getFirst();
 
         // We can't be sure of the order of the fields in the record, so we allow either 'least' or 'favorite' to be first
         final String outputContents = new String(out.toByteArray());
@@ -778,7 +773,7 @@ public class TestLookupRecord {
         runner.enqueue("");
         runner.run();
 
-        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_SUCCESS).get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_SUCCESS).getFirst();
         out.assertContentEquals("John Doe,48,soccer,basketball\nJane Doe,47\n");
     }
 
@@ -820,7 +815,7 @@ public class TestLookupRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(LookupRecord.REL_SUCCESS);
-        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_SUCCESS).get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_SUCCESS).getFirst();
         out.assertContentEquals(new File("src/test/resources/TestLookupRecord/lookup-array-output.json").toPath());
     }
 
@@ -874,7 +869,7 @@ public class TestLookupRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(LookupRecord.REL_SUCCESS);
-        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_SUCCESS).get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_SUCCESS).getFirst();
         out.assertContentEquals(new File("src/test/resources/TestLookupRecord/lookup-array-output-empty-array.json").toPath());
     }
 
@@ -910,11 +905,11 @@ public class TestLookupRecord {
         runner.run();
 
         runner.assertTransferCount(LookupRecord.REL_UNMATCHED, 1);
-        final MockFlowFile outUnmatched = runner.getFlowFilesForRelationship(LookupRecord.REL_UNMATCHED).get(0);
+        final MockFlowFile outUnmatched = runner.getFlowFilesForRelationship(LookupRecord.REL_UNMATCHED).getFirst();
         outUnmatched.assertContentEquals(new File("src/test/resources/TestLookupRecord/lookup-array-output-missing-unmatched.json").toPath());
 
         runner.assertTransferCount(LookupRecord.REL_MATCHED, 1);
-        final MockFlowFile outMatched = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).get(0);
+        final MockFlowFile outMatched = runner.getFlowFilesForRelationship(LookupRecord.REL_MATCHED).getFirst();
         outMatched.assertContentEquals(new File("src/test/resources/TestLookupRecord/lookup-array-output-missing-matched.json").toPath());
     }
 
@@ -955,10 +950,9 @@ public class TestLookupRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(LookupRecord.REL_UNMATCHED);
-        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_UNMATCHED).get(0);
+        final MockFlowFile out = runner.getFlowFilesForRelationship(LookupRecord.REL_UNMATCHED).getFirst();
         out.assertContentEquals(new File("src/test/resources/TestLookupRecord/lookup-array-output-unmatched.json").toPath());
     }
-
 
     @Test
     public void testLiteralCoordinate() {
@@ -970,6 +964,23 @@ public class TestLookupRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(LookupRecord.REL_MATCHED, 1);
+    }
+
+    @Test
+    void testMigrateProperties() {
+        final Map<String, String> expectedRenamed = Map.ofEntries(
+                Map.entry("record-reader", LookupRecord.RECORD_READER.getName()),
+                Map.entry("record-writer", LookupRecord.RECORD_WRITER.getName()),
+                Map.entry("lookup-service", LookupRecord.LOOKUP_SERVICE.getName()),
+                Map.entry("result-contents", LookupRecord.RESULT_CONTENTS.getName()),
+                Map.entry("routing-strategy", LookupRecord.ROUTING_STRATEGY.getName()),
+                Map.entry("record-update-strategy", LookupRecord.REPLACEMENT_STRATEGY.getName()),
+                Map.entry("result-record-path", LookupRecord.RESULT_RECORD_PATH.getName()),
+                Map.entry("record-path-lookup-miss-result-cache-size", LookupRecord.CACHE_SIZE.getName())
+        );
+
+        final PropertyMigrationResult propertyMigrationResult = runner.migrateProperties();
+        assertEquals(expectedRenamed, propertyMigrationResult.getPropertiesRenamed());
     }
 
     private static class MapLookup extends AbstractControllerService implements StringLookupService {
