@@ -17,9 +17,7 @@
 package org.apache.nifi.processors.standard;
 
 import jakarta.xml.bind.DatatypeConverter;
-import org.apache.commons.io.FileUtils;
-import org.apache.nifi.controller.AbstractControllerService;
-import org.apache.nifi.dbcp.DBCPService;
+import org.apache.nifi.embedded.database.EmbeddedDatabaseConnectionService;
 import org.apache.nifi.processor.FlowFileFilter;
 import org.apache.nifi.processor.Relationship;
 import org.apache.nifi.processor.exception.ProcessException;
@@ -28,18 +26,19 @@ import org.apache.nifi.provenance.ProvenanceEventRecord;
 import org.apache.nifi.provenance.ProvenanceEventType;
 import org.apache.nifi.reporting.InitializationException;
 import org.apache.nifi.util.MockFlowFile;
+import org.apache.nifi.util.PropertyMigrationResult;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
+import org.junit.jupiter.api.io.TempDir;
 
+import java.io.IOException;
 import java.nio.ByteBuffer;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.sql.Connection;
-import java.sql.DriverManager;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
@@ -57,7 +56,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Random;
-import java.util.UUID;
 import java.util.function.Function;
 
 import static java.nio.charset.StandardCharsets.US_ASCII;
@@ -70,29 +68,22 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
 public class TestPutSQL {
     private static final String createPersons = "CREATE TABLE PERSONS (id integer primary key, name varchar(100), code integer)";
     private static final String createPersonsAutoId = "CREATE TABLE PERSONS_AI (id INTEGER NOT NULL GENERATED ALWAYS AS IDENTITY (START WITH 1), name VARCHAR(100), code INTEGER check(code <= 100))";
 
-    private static final String DERBY_LOG_PROPERTY = "derby.stream.error.file";
-    private static final Path SYSTEM_TEMP_DIR = Paths.get(System.getProperty("java.io.tmpdir"));
-    private static final String TEST_DIRECTORY_NAME = "%s-%s".formatted(TestPutSQL.class.getSimpleName(), UUID.randomUUID());
-    private static final Path DB_DIRECTORY = SYSTEM_TEMP_DIR.resolve(TEST_DIRECTORY_NAME);
     private static final Random random = new Random();
 
-    /**
-     * Setting up Connection pooling is expensive operation.
-     * So let's do this only once and reuse MockDBCPService in each test.
-     */
-    static protected MockDBCPService service;
+    private static final String SERVICE_ID = FilteringEmbeddedDatabaseConnectionService.class.getSimpleName();
+
+    private static FilteringEmbeddedDatabaseConnectionService service;
+    private TestRunner runner;
 
     @BeforeAll
-    public static void setupBeforeAll() throws ProcessException, SQLException {
-        System.setProperty(DERBY_LOG_PROPERTY, "target/derby.log");
-        service = new MockDBCPService(DB_DIRECTORY.toAbsolutePath().toString());
+    static void setService(@TempDir final Path databaseLocation) throws SQLException {
+        service = new FilteringEmbeddedDatabaseConnectionService(databaseLocation);
+
         try (final Connection conn = service.getConnection()) {
             try (final Statement stmt = conn.createStatement()) {
                 stmt.executeUpdate(createPersons);
@@ -102,20 +93,20 @@ public class TestPutSQL {
     }
 
     @AfterAll
-    public static void cleanupAfterAll() {
-        System.clearProperty(DERBY_LOG_PROPERTY);
+    static void close() throws IOException {
+        service.close();
+    }
 
-        try {
-            FileUtils.deleteDirectory(DB_DIRECTORY.toFile());
-        } catch (final Exception ignored) {
-
-        }
+    @BeforeEach
+    void setUp() throws InitializationException {
+        runner = TestRunners.newTestRunner(PutSQL.class);
+        runner.addControllerService(SERVICE_ID, service);
+        runner.enableControllerService(service);
+        runner.setProperty(PutSQL.CONNECTION_POOL, SERVICE_ID);
     }
 
     @Test
-    public void testDirectStatements() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
-
+    public void testDirectStatements() throws ProcessException, SQLException {
         recreateTable("PERSONS", createPersons);
 
         runner.enqueue("INSERT INTO PERSONS (ID, NAME, CODE) VALUES (1, 'Mark', 84)".getBytes());
@@ -150,8 +141,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testCommitOnCleanup() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testCommitOnCleanup() throws ProcessException, SQLException {
         runner.setProperty(PutSQL.AUTO_COMMIT, "false");
 
         recreateTable("PERSONS", createPersons);
@@ -174,8 +164,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testInsertWithGeneratedKeys() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testInsertWithGeneratedKeys() throws ProcessException, SQLException {
         runner.setProperty(PutSQL.OBTAIN_GENERATED_KEYS, "true");
 
         recreateTable("PERSONS_AI", createPersonsAutoId);
@@ -183,7 +172,7 @@ public class TestPutSQL {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(PutSQL.REL_SUCCESS, 1);
-        final MockFlowFile mff = runner.getFlowFilesForRelationship(PutSQL.REL_SUCCESS).get(0);
+        final MockFlowFile mff = runner.getFlowFilesForRelationship(PutSQL.REL_SUCCESS).getFirst();
         mff.assertAttributeEquals("sql.generated.key", "1");
 
         try (final Connection conn = service.getConnection()) {
@@ -199,8 +188,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testProvenanceEventsWithBatchMode() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testProvenanceEventsWithBatchMode() throws ProcessException, SQLException {
         runner.setProperty(PutSQL.BATCH_SIZE, "10");
         runner.setProperty(PutSQL.SUPPORT_TRANSACTIONS, "false");
         runner.setProperty(PutSQL.OBTAIN_GENERATED_KEYS, "false");
@@ -209,8 +197,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testProvenanceEventsWithFragmentedTransaction() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testProvenanceEventsWithFragmentedTransaction() throws ProcessException, SQLException {
         runner.setProperty(PutSQL.BATCH_SIZE, "10");
         runner.setProperty(PutSQL.SUPPORT_TRANSACTIONS, "true");
         runner.setProperty(PutSQL.OBTAIN_GENERATED_KEYS, "false");
@@ -219,8 +206,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testProvenanceEventsWithObtainGeneratedKeys() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testProvenanceEventsWithObtainGeneratedKeys() throws ProcessException, SQLException {
         runner.setProperty(PutSQL.BATCH_SIZE, "10");
         runner.setProperty(PutSQL.SUPPORT_TRANSACTIONS, "false");
         runner.setProperty(PutSQL.OBTAIN_GENERATED_KEYS, "true");
@@ -245,8 +231,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testKeepFlowFileOrderingWithBatchMode() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testKeepFlowFileOrderingWithBatchMode() throws ProcessException, SQLException {
         runner.setProperty(PutSQL.BATCH_SIZE, "10");
         runner.setProperty(PutSQL.SUPPORT_TRANSACTIONS, "false");
         runner.setProperty(PutSQL.OBTAIN_GENERATED_KEYS, "false");
@@ -255,8 +240,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testKeepFlowFileOrderingWithFragmentedTransaction() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testKeepFlowFileOrderingWithFragmentedTransaction() throws ProcessException, SQLException {
         runner.setProperty(PutSQL.BATCH_SIZE, "10");
         runner.setProperty(PutSQL.SUPPORT_TRANSACTIONS, "true");
         runner.setProperty(PutSQL.OBTAIN_GENERATED_KEYS, "false");
@@ -265,8 +249,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testKeepFlowFileOrderingWithObtainGeneratedKeys() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testKeepFlowFileOrderingWithObtainGeneratedKeys() throws ProcessException, SQLException {
         runner.setProperty(PutSQL.BATCH_SIZE, "10");
         runner.setProperty(PutSQL.SUPPORT_TRANSACTIONS, "false");
         runner.setProperty(PutSQL.OBTAIN_GENERATED_KEYS, "true");
@@ -312,10 +295,8 @@ public class TestPutSQL {
         }
     }
 
-
     @Test
-    public void testFailInMiddleWithBadStatementAndSupportTransaction() throws InitializationException, ProcessException {
-        final TestRunner runner = initTestRunner();
+    public void testFailInMiddleWithBadStatementAndSupportTransaction() throws ProcessException {
         testFailInMiddleWithBadStatement(runner);
         runner.run();
 
@@ -325,8 +306,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testFailInMiddleWithBadStatementAndNotSupportTransaction() throws InitializationException, ProcessException {
-        final TestRunner runner = initTestRunner();
+    public void testFailInMiddleWithBadStatementAndNotSupportTransaction() throws ProcessException {
         runner.setProperty(PutSQL.SUPPORT_TRANSACTIONS, "false");
         testFailInMiddleWithBadStatement(runner);
         runner.run();
@@ -338,8 +318,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testFailInMiddleWithBadStatementRollbackOnFailure() throws InitializationException, ProcessException {
-        final TestRunner runner = initTestRunner();
+    public void testFailInMiddleWithBadStatementRollbackOnFailure() throws ProcessException {
         runner.setProperty(PutSQL.OBTAIN_GENERATED_KEYS, "false");
         runner.setProperty(RollbackOnFailure.ROLLBACK_ON_FAILURE, "true");
         runner.enqueue("INSERT INTO PERSONS_AI (NAME, CODE) VALUES ('Mark', 84)".getBytes());
@@ -354,8 +333,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testFailInMiddleWithBadParameterTypeAndNotSupportTransaction() throws InitializationException, ProcessException {
-        final TestRunner runner = initTestRunner();
+    public void testFailInMiddleWithBadParameterTypeAndNotSupportTransaction() throws ProcessException {
         runner.setProperty(PutSQL.SUPPORT_TRANSACTIONS, "false");
         testFailInMiddleWithBadParameterType(runner);
         runner.run();
@@ -368,8 +346,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testFailInMiddleWithBadParameterTypeAndSupportTransaction() throws InitializationException, ProcessException {
-        final TestRunner runner = initTestRunner();
+    public void testFailInMiddleWithBadParameterTypeAndSupportTransaction() throws ProcessException {
         testFailInMiddleWithBadParameterType(runner);
         runner.run();
 
@@ -380,8 +357,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testFailInMiddleWithBadParameterTypeRollbackOnFailure() throws InitializationException, ProcessException {
-        final TestRunner runner = initTestRunner();
+    public void testFailInMiddleWithBadParameterTypeRollbackOnFailure() throws ProcessException {
         runner.setProperty(PutSQL.OBTAIN_GENERATED_KEYS, "false");
         runner.setProperty(RollbackOnFailure.ROLLBACK_ON_FAILURE, "true");
 
@@ -406,8 +382,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testFailInMiddleWithNumberFormatException() throws InitializationException, ProcessException {
-        final TestRunner runner = initTestRunner();
+    public void testFailInMiddleWithNumberFormatException() throws ProcessException {
         runner.setProperty(RollbackOnFailure.ROLLBACK_ON_FAILURE, "false");
         runner.setProperty(PutSQL.SUPPORT_TRANSACTIONS, "false");
         final Map<String, String> goodAttributes = new HashMap<>();
@@ -432,8 +407,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testFailInMiddleWithBadParameterValueAndSupportTransaction() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testFailInMiddleWithBadParameterValueAndSupportTransaction() throws ProcessException, SQLException {
         testFailInMiddleWithBadParameterValue(runner);
         runner.run();
 
@@ -453,8 +427,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testFailInMiddleWithBadParameterValueAndNotSupportTransaction() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testFailInMiddleWithBadParameterValueAndNotSupportTransaction() throws ProcessException, SQLException {
         runner.setProperty(PutSQL.SUPPORT_TRANSACTIONS, "false");
         testFailInMiddleWithBadParameterValue(runner);
         runner.run();
@@ -481,8 +454,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testFailInMiddleWithBadParameterValueRollbackOnFailure() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testFailInMiddleWithBadParameterValueRollbackOnFailure() throws ProcessException, SQLException {
         runner.setProperty(PutSQL.OBTAIN_GENERATED_KEYS, "false");
         runner.setProperty(RollbackOnFailure.ROLLBACK_ON_FAILURE, "true");
 
@@ -515,10 +487,8 @@ public class TestPutSQL {
         }
     }
 
-
     @Test
-    public void testUsingSqlDataTypesWithNegativeValues() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testUsingSqlDataTypesWithNegativeValues() throws ProcessException, SQLException {
         try (final Connection conn = service.getConnection()) {
             try (final Statement stmt = conn.createStatement()) {
                 stmt.executeUpdate("CREATE TABLE PERSONS2 (id integer primary key, name varchar(100), code bigint)");
@@ -547,11 +517,10 @@ public class TestPutSQL {
 
     // Not specifying a format for the date fields here to continue to test backwards compatibility
     @Test
-    public void testUsingTimestampValuesEpochAndString() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testUsingTimestampValuesEpochAndString() throws ProcessException, SQLException {
         try (final Connection conn = service.getConnection()) {
             try (final Statement stmt = conn.createStatement()) {
-                stmt.executeUpdate("CREATE TABLE TIMESTAMPTEST1 (id integer primary key, ts1 timestamp, ts2 timestamp)");
+                stmt.executeUpdate("CREATE TABLE TIMESTAMPTEST1 (id integer primary key, ts1 timestamp(3), ts2 timestamp(3))");
             }
         }
 
@@ -584,11 +553,10 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testUsingTimestampValuesWithFormatAttribute() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testUsingTimestampValuesWithFormatAttribute() throws ProcessException, SQLException {
         try (final Connection conn = service.getConnection()) {
             try (final Statement stmt = conn.createStatement()) {
-                stmt.executeUpdate("CREATE TABLE TIMESTAMPTEST2 (id integer primary key, ts1 timestamp, ts2 timestamp)");
+                stmt.executeUpdate("CREATE TABLE TIMESTAMPTEST2 (id integer primary key, ts1 timestamp(9), ts2 timestamp(9))");
             }
         }
 
@@ -628,8 +596,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testUsingDateTimeValuesWithFormatAttribute() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testUsingDateTimeValuesWithFormatAttribute() throws ProcessException, SQLException {
         try (final Connection conn = service.getConnection()) {
             try (final Statement stmt = conn.createStatement()) {
                 stmt.executeUpdate("CREATE TABLE TIMESTAMPTEST3 (id integer primary key, ts1 TIME, ts2 DATE)");
@@ -716,8 +683,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testBitType() throws SQLException, InitializationException {
-        final TestRunner runner = initTestRunner();
+    public void testBitType() throws SQLException {
         try (final Connection conn = service.getConnection()) {
             try (final Statement stmt = conn.createStatement()) {
                 stmt.executeUpdate("CREATE TABLE BITTESTS (id integer primary key, bt1 BOOLEAN)");
@@ -829,8 +795,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testUsingTimeValuesEpochAndString() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testUsingTimeValuesEpochAndString() throws ProcessException, SQLException {
         try (final Connection conn = service.getConnection()) {
             try (final Statement stmt = conn.createStatement()) {
                 stmt.executeUpdate("CREATE TABLE TIMETESTS (id integer primary key, ts1 time, ts2 time)");
@@ -838,11 +803,10 @@ public class TestPutSQL {
         }
 
         final String arg2TS = "00:01:02";
-        final String art3TS = "02:03:04";
+        final String art3TS = "12:03:04";
         final String timeFormatString = "HH:mm:ss";
         final DateTimeFormatter dateTimeFormatter = DateTimeFormatter.ofPattern(timeFormatString);
         java.util.Date parsedDate = Date.from(LocalTime.parse(arg2TS, dateTimeFormatter).atDate(LocalDate.now()).atZone(ZoneId.systemDefault()).toInstant());
-
 
         final Map<String, String> attributes = new HashMap<>();
         attributes.put("sql.args.1.type", String.valueOf(Types.TIME));
@@ -870,8 +834,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testUsingDateValuesEpochAndString() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testUsingDateValuesEpochAndString() throws ProcessException, SQLException {
         try (final Connection conn = service.getConnection()) {
             try (final Statement stmt = conn.createStatement()) {
                 stmt.executeUpdate("CREATE TABLE DATETESTS (id integer primary key, ts1 date, ts2 date)");
@@ -906,12 +869,10 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testBinaryColumnTypes() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testBinaryColumnTypes() throws ProcessException, SQLException {
         try (final Connection conn = service.getConnection()) {
             try (final Statement stmt = conn.createStatement()) {
-                stmt.executeUpdate("CREATE TABLE BINARYTESTS (id integer primary key, bn1 CHAR(8) FOR BIT DATA, bn2 VARCHAR(100) FOR BIT DATA, " +
-                        "bn3 LONG VARCHAR FOR BIT DATA)");
+                stmt.executeUpdate("CREATE TABLE BINARYTESTS (id integer primary key, bn1 BLOB, bn2 BLOB, bn3 BLOB)");
             }
         }
 
@@ -1032,9 +993,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testStatementsWithPreparedParameters() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
-
+    public void testStatementsWithPreparedParameters() throws ProcessException, SQLException {
         recreateTable("PERSONS", createPersons);
 
         final Map<String, String> attributes = new HashMap<>();
@@ -1088,11 +1047,8 @@ public class TestPutSQL {
         }
     }
 
-
     @Test
-    public void testMultipleStatementsWithinFlowFile() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
-
+    public void testMultipleStatementsWithinFlowFile() throws ProcessException, SQLException {
         recreateTable("PERSONS", createPersons);
 
         final String sql = "INSERT INTO PERSONS (ID, NAME, CODE) VALUES (?, ?, ?); " +
@@ -1126,8 +1082,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testMultipleStatementsWithinFlowFileRollbackOnFailure() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testMultipleStatementsWithinFlowFileRollbackOnFailure() throws ProcessException, SQLException {
         runner.setProperty(RollbackOnFailure.ROLLBACK_ON_FAILURE, "true");
 
         recreateTable("PERSONS", createPersons);
@@ -1159,10 +1114,8 @@ public class TestPutSQL {
         }
     }
 
-
     @Test
-    public void testWithNullParameter() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testWithNullParameter() throws ProcessException, SQLException {
         final Map<String, String> attributes = new HashMap<>();
         attributes.put("sql.args.1.type", String.valueOf(Types.INTEGER));
         attributes.put("sql.args.1.value", "1");
@@ -1190,9 +1143,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testInvalidStatement() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
-
+    public void testInvalidStatement() throws ProcessException, SQLException {
         recreateTable("PERSONS", createPersons);
 
         final String sql = "INSERT INTO PERSONS (ID, NAME, CODE) VALUES (?, ?, ?); " +
@@ -1226,8 +1177,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testInvalidStatementRollbackOnFailure() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testInvalidStatementRollbackOnFailure() throws ProcessException, SQLException {
         runner.setProperty(RollbackOnFailure.ROLLBACK_ON_FAILURE, "true");
 
         recreateTable("PERSONS", createPersons);
@@ -1259,47 +1209,8 @@ public class TestPutSQL {
         }
     }
 
-
     @Test
-    public void testRetryableFailure() throws InitializationException, ProcessException {
-        final TestRunner runner = TestRunners.newTestRunner(PutSQL.class);
-        final DBCPService service = new SQLExceptionService(null);
-        runner.addControllerService("dbcp", service);
-        runner.enableControllerService(service);
-
-        runner.setProperty(PutSQL.CONNECTION_POOL, "dbcp");
-
-        final String sql = "INSERT INTO PERSONS (ID, NAME, CODE) VALUES (?, ?, ?); " +
-                "UPDATE PERSONS SET NAME='George' WHERE ID=?; ";
-        final Map<String, String> attributes = new HashMap<>();
-        attributes.put("sql.args.1.type", String.valueOf(Types.INTEGER));
-        attributes.put("sql.args.1.value", "1");
-
-        attributes.put("sql.args.2.type", String.valueOf(Types.VARCHAR));
-        attributes.put("sql.args.2.value", "Mark");
-
-        attributes.put("sql.args.3.type", String.valueOf(Types.INTEGER));
-        attributes.put("sql.args.3.value", "84");
-
-        attributes.put("sql.args.4.type", String.valueOf(Types.INTEGER));
-        attributes.put("sql.args.4.value", "1");
-
-        runner.enqueue(sql.getBytes(), attributes);
-        runner.run();
-
-        // should fail because of the semicolon
-        runner.assertAllFlowFilesTransferred(PutSQL.REL_RETRY, 1);
-        assertNonSQLErrorRelatedAttributes(runner, PutSQL.REL_RETRY);
-    }
-
-    @Test
-    public void testRetryableFailureRollbackOnFailure() throws InitializationException, ProcessException {
-        final TestRunner runner = TestRunners.newTestRunner(PutSQL.class);
-        final DBCPService service = new SQLExceptionService(null);
-        runner.addControllerService("dbcp", service);
-        runner.enableControllerService(service);
-
-        runner.setProperty(PutSQL.CONNECTION_POOL, "dbcp");
+    public void testRetryableFailureRollbackOnFailure() throws ProcessException {
         runner.setProperty(RollbackOnFailure.ROLLBACK_ON_FAILURE, "true");
 
         final String sql = "INSERT INTO PERSONS (ID, NAME, CODE) VALUES (?, ?, ?); " +
@@ -1324,8 +1235,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testMultipleFlowFilesSuccessfulInTransaction() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testMultipleFlowFilesSuccessfulInTransaction() throws ProcessException, SQLException {
         runner.setProperty(PutSQL.BATCH_SIZE, "1");
 
         recreateTable("PERSONS", createPersons);
@@ -1379,8 +1289,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testMultipleFlowFilesSuccessfulInTransactionRollBackOnFailure() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testMultipleFlowFilesSuccessfulInTransactionRollBackOnFailure() throws ProcessException, SQLException {
         runner.setProperty(PutSQL.BATCH_SIZE, "1");
         runner.setProperty(RollbackOnFailure.ROLLBACK_ON_FAILURE, "true");
 
@@ -1405,13 +1314,10 @@ public class TestPutSQL {
 
         // No FlowFiles should be transferred because there were not enough FlowFiles with the same fragment identifier
         runner.assertAllFlowFilesTransferred(PutSQL.REL_SUCCESS, 0);
-
     }
 
     @Test
-    public void testTransactionTimeout() throws InitializationException, ProcessException {
-        final TestRunner runner = initTestRunner();
-
+    public void testTransactionTimeout() throws ProcessException {
         runner.setProperty(PutSQL.TRANSACTION_TIMEOUT, "5 secs");
         final Map<String, String> attributes = new HashMap<>();
         attributes.put("fragment.identifier", "1");
@@ -1444,9 +1350,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testTransactionTimeoutRollbackOnFailure() throws InitializationException, ProcessException {
-        final TestRunner runner = initTestRunner();
-
+    public void testTransactionTimeoutRollbackOnFailure() throws ProcessException {
         runner.setProperty(PutSQL.TRANSACTION_TIMEOUT, "5 secs");
         runner.setProperty(RollbackOnFailure.ROLLBACK_ON_FAILURE, "true");
         final Map<String, String> attributes = new HashMap<>();
@@ -1480,9 +1384,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testNullFragmentCountRollbackOnFailure() throws InitializationException, ProcessException {
-        final TestRunner runner = initTestRunner();
-
+    public void testNullFragmentCountRollbackOnFailure() throws ProcessException {
         runner.setProperty(PutSQL.TRANSACTION_TIMEOUT, "5 secs");
         runner.setProperty(RollbackOnFailure.ROLLBACK_ON_FAILURE, "true");
         final Map<String, String> attribute1 = new HashMap<>();
@@ -1492,7 +1394,6 @@ public class TestPutSQL {
 
         final Map<String, String> attribute2 = new HashMap<>();
         attribute2.put("fragment.identifier", "1");
-//        attribute2.put("fragment.count", null);
         attribute2.put("fragment.index", "1");
 
         runner.enqueue(new byte[]{}, attribute1);
@@ -1505,8 +1406,7 @@ public class TestPutSQL {
     }
 
     @Test
-    public void testStatementsFromProperty() throws InitializationException, ProcessException, SQLException {
-        final TestRunner runner = initTestRunner();
+    public void testStatementsFromProperty() throws ProcessException, SQLException {
         runner.setProperty(PutSQL.SQL_STATEMENT, "INSERT INTO PERSONS (ID, NAME, CODE) VALUES (${row.id}, 'Mark', 84)");
 
         recreateTable("PERSONS", createPersons);
@@ -1576,7 +1476,6 @@ public class TestPutSQL {
         assertEquals(ACCEPT_AND_CONTINUE, txFilter.filter(ff3));
         assertEquals(REJECT_AND_CONTINUE, txFilter.filter(ff4));
 
-
         final FlowFileFilter nonTxFilter = flowFile -> "true".equals(flowFile.getAttribute("accept"))
             ? ACCEPT_AND_CONTINUE
             : REJECT_AND_CONTINUE;
@@ -1607,9 +1506,6 @@ public class TestPutSQL {
 
         try {
             recreateTable("PERSONS", createPersons);
-
-            TestRunner runner = initTestRunner();
-
             runner.enqueue("INSERT INTO PERSONS (ID, NAME, CODE) VALUES (1, 'Mark', 84)", new HashMap<>());
             runner.run();
 
@@ -1628,9 +1524,6 @@ public class TestPutSQL {
 
         try {
             recreateTable("PERSONS", createPersons);
-
-            TestRunner runner = initTestRunner();
-
             Map<String, String> attributes = new HashMap<>();
             attributes.put("database.name", "someDatabaseName");
             runner.enqueue("INSERT INTO PERSONS (ID, NAME, CODE) VALUES (1, 'Mark', 84)", attributes);
@@ -1643,6 +1536,18 @@ public class TestPutSQL {
         } finally {
             service.setFlowFileFilter(null);
         }
+    }
+
+    @Test
+    void testMigrateProperties() {
+        final Map<String, String> expectedRenamed = Map.ofEntries(
+                Map.entry("putsql-sql-statement", PutSQL.SQL_STATEMENT.getName()),
+                Map.entry("database-session-autocommit", PutSQL.AUTO_COMMIT.getName()),
+                Map.entry(RollbackOnFailure.OLD_ROLLBACK_ON_FAILURE_PROPERTY_NAME, RollbackOnFailure.ROLLBACK_ON_FAILURE.getName())
+        );
+
+        final PropertyMigrationResult propertyMigrationResult = runner.migrateProperties();
+        assertEquals(expectedRenamed, propertyMigrationResult.getPropertiesRenamed());
     }
 
     private void makeServiceLookLikeAnInstanceOfDBCPConnectionPoolLookup() {
@@ -1703,32 +1608,11 @@ public class TestPutSQL {
         return attributes;
     }
 
-    /**
-     * Simple implementation only for testing purposes
-     */
-    private static class MockDBCPService extends AbstractControllerService implements DBCPService {
-        private final String dbLocation;
+    private static class FilteringEmbeddedDatabaseConnectionService extends EmbeddedDatabaseConnectionService {
         private volatile FlowFileFilter flowFileFilter;
 
-        public MockDBCPService(final String dbLocation) {
-            this.dbLocation = dbLocation;
-        }
-
-        @Override
-        public String getIdentifier() {
-            return "dbcp";
-        }
-
-        @Override
-        public Connection getConnection() throws ProcessException {
-            try {
-                Class.forName("org.apache.derby.jdbc.EmbeddedDriver");
-                final Connection conn = DriverManager.getConnection("jdbc:derby:" + dbLocation + ";create=true");
-                return conn;
-            } catch (final Exception e) {
-                e.printStackTrace();
-                throw new ProcessException("getConnection failed: " + e);
-            }
+        FilteringEmbeddedDatabaseConnectionService(final Path databaseLocation) {
+            super(databaseLocation);
         }
 
         @Override
@@ -1736,45 +1620,10 @@ public class TestPutSQL {
             return flowFileFilter;
         }
 
-        public void setFlowFileFilter(FlowFileFilter flowFileFilter) {
+        void setFlowFileFilter(FlowFileFilter flowFileFilter) {
             this.flowFileFilter = flowFileFilter;
         }
     }
-
-    /**
-     * Simple implementation only for testing purposes
-     */
-    private static class SQLExceptionService extends AbstractControllerService implements DBCPService {
-        private final DBCPService service;
-        private int allowedBeforeFailure = 0;
-        private int successful = 0;
-
-        public SQLExceptionService(final DBCPService service) {
-            this.service = service;
-        }
-
-        @Override
-        public String getIdentifier() {
-            return "dbcp";
-        }
-
-        @Override
-        public Connection getConnection() throws ProcessException {
-            try {
-                if (++successful > allowedBeforeFailure) {
-                    final Connection conn = mock(Connection.class);
-                    when(conn.prepareStatement(Mockito.any(String.class))).thenThrow(new SQLException("Unit Test Generated SQLException"));
-                    return conn;
-                } else {
-                    return service.getConnection();
-                }
-            } catch (final Exception e) {
-                e.printStackTrace();
-                throw new ProcessException("getConnection failed: " + e);
-            }
-        }
-    }
-
 
     private void recreateTable(String tableName, String createSQL) throws ProcessException, SQLException {
         try (final Connection conn = service.getConnection()) {
@@ -1795,8 +1644,9 @@ public class TestPutSQL {
         byte[] bBinary = randomBytes(length);
         ByteBuffer bytes = ByteBuffer.wrap(bBinary);
         StringBuilder sbBytes = new StringBuilder();
-        for (int i = bytes.position(); i < bytes.limit(); i++)
+        for (int i = bytes.position(); i < bytes.limit(); i++) {
             sbBytes.append((char) bytes.get(i));
+        }
 
         return sbBytes.toString();
     }
@@ -1811,16 +1661,6 @@ public class TestPutSQL {
         return DatatypeConverter.printBase64Binary(bBinary);
     }
 
-    private TestRunner initTestRunner() throws InitializationException {
-        final TestRunner runner = TestRunners.newTestRunner(PutSQL.class);
-
-        runner.addControllerService("dbcp", service);
-        runner.enableControllerService(service);
-        runner.setProperty(PutSQL.CONNECTION_POOL, "dbcp");
-
-        return runner;
-    }
-
     private static void assertSQLExceptionRelatedAttributes(final TestRunner runner, Relationship relationship) {
         List<MockFlowFile> flowFiles = runner.getFlowFilesForRelationship(relationship);
         flowFiles.forEach(ff -> {
@@ -1832,16 +1672,13 @@ public class TestPutSQL {
 
     private static void assertNonSQLErrorRelatedAttributes(final TestRunner runner,  Relationship relationship) {
         List<MockFlowFile> flowFiles = runner.getFlowFilesForRelationship(relationship);
-        flowFiles.forEach(ff -> {
-            ff.assertAttributeExists("error.message");
-        });
+        flowFiles.forEach(ff -> ff.assertAttributeExists("error.message"));
     }
 
     private static void assertOriginalAttributesAreKept(final TestRunner runner) {
         runner.assertAllFlowFilesContainAttribute("sql.args.1.type");
         runner.assertAllFlowFilesContainAttribute("sql.args.1.value");
     }
-
 
     private static void assertErrorAttributesInTransaction(final TestRunner runner, Relationship relationship) {
         List<MockFlowFile> flowFiles = runner.getFlowFilesForRelationship(relationship);
@@ -1853,9 +1690,7 @@ public class TestPutSQL {
 
     private static void assertErrorAttributesNotSet(final TestRunner runner, Relationship relationship) {
         List<MockFlowFile> flowFiles = runner.getFlowFilesForRelationship(relationship);
-        flowFiles.forEach(ff -> {
-            ff.assertAttributeNotExists("error.message");
-        });
+        flowFiles.forEach(ff -> ff.assertAttributeNotExists("error.message"));
     }
 
     private static boolean errorAttributesAreSet(MockFlowFile ff) {
