@@ -16,95 +16,71 @@
  */
 package org.apache.nifi.processors.standard;
 
-import org.apache.nifi.controller.AbstractControllerService;
-import org.apache.nifi.dbcp.DBCPService;
-import org.apache.nifi.processor.exception.ProcessException;
-import org.apache.nifi.processors.standard.db.impl.DerbyDatabaseAdapter;
+import org.apache.nifi.reporting.InitializationException;
 import org.apache.nifi.serialization.record.MockRecordParser;
 import org.apache.nifi.serialization.record.MockRecordWriter;
 import org.apache.nifi.serialization.record.RecordField;
 import org.apache.nifi.serialization.record.RecordFieldType;
 import org.apache.nifi.util.MockFlowFile;
+import org.apache.nifi.util.PropertyMigrationResult;
 import org.apache.nifi.util.TestRunner;
-import org.apache.nifi.util.TestRunners;
-import org.junit.jupiter.api.AfterAll;
-import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.io.TempDir;
 
-import java.io.File;
 import java.sql.Connection;
-import java.sql.DriverManager;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-public class TestUpdateDatabaseTable {
+class TestUpdateDatabaseTable extends AbstractDatabaseConnectionServiceTest {
 
     private static final String createPersons = "CREATE TABLE \"persons\" (\"id\" integer primary key, \"name\" varchar(100), \"code\" integer)";
 
-    private static final String createSchema = "CREATE SCHEMA \"testSchema\"";
+    private static final String createSchema = "CREATE SCHEMA testSchema";
 
-
-    @TempDir
-    public static File tempDir;
-
-    private static String derbyErrorFile;
+    private static final String TEST_DB_TYPE = "MySQL";
 
     private TestRunner runner;
-    private UpdateDatabaseTable processor;
-    private static DBCPService service;
-
-    @BeforeAll
-    public static void setupClass() throws ProcessException {
-        derbyErrorFile = System.getProperty("derby.stream.error.file", "");
-        System.setProperty("derby.stream.error.file", "target/derby.log");
-        final File dbDir = new File(tempDir, "db");
-        service = new MockDBCPService(dbDir.getAbsolutePath());
-    }
-
-    @AfterAll
-    public static void restoreDefaults() {
-        System.setProperty("derby.stream.error.file", derbyErrorFile);
-        final File dbDir = new File(tempDir, "db");
-        dbDir.deleteOnExit();
-        try {
-            DriverManager.getConnection("jdbc:derby:" + dbDir + ";shutdown=true");
-        } catch (SQLException ignored) {
-            // Ignore, most likely the DB has already been shutdown
-        }
-    }
 
     @BeforeEach
-    public void setup() {
-        processor = new UpdateDatabaseTable();
+    void setRunner() throws InitializationException {
+        runner = newTestRunner(UpdateDatabaseTable.class);
+    }
 
-        try (Statement s = service.getConnection().createStatement()) {
-            s.execute("DROP TABLE \"persons\"");
-        } catch (SQLException ignored) {
-            // Ignore, table probably doesn't exist
+    @AfterEach
+    void dropTables() {
+        final List<String> tables = List.of(
+                "\"persons\"",
+                "\"newTable\""
+        );
+
+        for (final String table : tables) {
+            try (
+                    Connection connection = getConnection();
+                    Statement statement = connection.createStatement()
+            ) {
+                statement.execute("DROP TABLE %s".formatted(table));
+            } catch (final SQLException ignored) {
+
+            }
         }
 
-        try (Statement s = service.getConnection().createStatement()) {
-            s.execute("DROP TABLE \"newTable\"");
-        } catch (SQLException ignored) {
-            // Ignore, table probably doesn't exist
-        }
+        try (
+                Connection connection = getConnection();
+                Statement statement = connection.createStatement()
+        ) {
+            statement.execute("DROP SCHEMA \"testSchema\"");
+        } catch (final SQLException ignored) {
 
-        try (Statement s = service.getConnection().createStatement()) {
-            s.execute("DROP SCHEMA \"testSchema\"");
-        } catch (SQLException ignored) {
-            // Ignore, schema probably doesn't exist
         }
-
-        runner = TestRunners.newTestRunner(processor);
     }
 
     @Test
@@ -112,10 +88,10 @@ public class TestUpdateDatabaseTable {
         MockRecordParser readerFactory = new MockRecordParser();
 
         readerFactory.addSchemaField(new RecordField("id", RecordFieldType.INT.getDataType(), false));
-        readerFactory.addSchemaField(new RecordField("name", RecordFieldType.STRING.getDataType(), true));
+        readerFactory.addSchemaField(new RecordField("fractional", RecordFieldType.DOUBLE.getDataType(), true));
         readerFactory.addSchemaField(new RecordField("code", RecordFieldType.INT.getDataType(), 0, true));
-        readerFactory.addSchemaField(new RecordField("newField", RecordFieldType.STRING.getDataType(), 0, true));
-        readerFactory.addRecord(1, "name1", 10);
+        readerFactory.addSchemaField(new RecordField("newField", RecordFieldType.DOUBLE.getDataType(), false));
+        readerFactory.addRecord(1, 1.2345, 10);
 
         runner.addControllerService("mock-reader-factory", readerFactory);
         runner.enableControllerService(readerFactory);
@@ -125,52 +101,33 @@ public class TestUpdateDatabaseTable {
         runner.setProperty(UpdateDatabaseTable.CREATE_TABLE, UpdateDatabaseTable.CREATE_IF_NOT_EXISTS);
         runner.setProperty(UpdateDatabaseTable.QUOTE_TABLE_IDENTIFIER, "false");
         runner.setProperty(UpdateDatabaseTable.QUOTE_COLUMN_IDENTIFIERS, "true");
-        runner.setProperty(UpdateDatabaseTable.DB_TYPE, new DerbyDatabaseAdapter().getName());
-        runner.addControllerService("dbcp", service);
-        runner.enableControllerService(service);
-        runner.setProperty(UpdateDatabaseTable.DBCP_SERVICE, "dbcp");
+        runner.setProperty(UpdateDatabaseTable.DB_TYPE, TEST_DB_TYPE);
+
+        final String tableName = "NEWTABLE";
         Map<String, String> attrs = new HashMap<>();
         attrs.put("db.name", "default");
-        attrs.put("table.name", "newTable");
+        attrs.put("table.name", tableName);
         runner.enqueue(new byte[0], attrs);
         runner.run();
 
         runner.assertTransferCount(UpdateDatabaseTable.REL_SUCCESS, 1);
-        final MockFlowFile flowFile = runner.getFlowFilesForRelationship(UpdateDatabaseTable.REL_SUCCESS).get(0);
-        flowFile.assertAttributeEquals(UpdateDatabaseTable.ATTR_OUTPUT_TABLE, "newTable");
-        // Verify the table has been created with the expected fields
-        try (Statement s = service.getConnection().createStatement()) {
-            // The Derby equivalent of DESCRIBE TABLE (using a query rather than the ij tool)
-            ResultSet rs = s.executeQuery("select * from sys.syscolumns where referenceid = (select tableid from sys.systables where tablename = 'NEWTABLE') order by columnnumber");
-            assertTrue(rs.next());
-            // Columns 2,3,4 are Column Name, Column Index, and Column Type
-            assertEquals("id", rs.getString(2));
-            assertEquals(1, rs.getInt(3));
-            assertEquals("INTEGER NOT NULL", rs.getString(4));
-
-            assertTrue(rs.next());
-            assertEquals("name", rs.getString(2));
-            assertEquals(2, rs.getInt(3));
-            assertEquals("VARCHAR(100)", rs.getString(4));
-
-            assertTrue(rs.next());
-            assertEquals("code", rs.getString(2));
-            assertEquals(3, rs.getInt(3));
-            assertEquals("INTEGER", rs.getString(4));
-
-            assertTrue(rs.next());
-            assertEquals("newField", rs.getString(2));
-            assertEquals(4, rs.getInt(3));
-            assertEquals("VARCHAR(100)", rs.getString(4));
-
-            // No more rows
+        final MockFlowFile flowFile = runner.getFlowFilesForRelationship(UpdateDatabaseTable.REL_SUCCESS).getFirst();
+        flowFile.assertAttributeEquals(UpdateDatabaseTable.ATTR_OUTPUT_TABLE, tableName);
+        try (
+                Statement s = getConnection().createStatement();
+                ResultSet rs = getTableColumns(s, tableName)
+        ) {
+            assertColumnEquals(rs, "id", 1, "INTEGER");
+            assertColumnEquals(rs, "fractional", 2, "DOUBLE PRECISION");
+            assertColumnEquals(rs, "code", 3, "INTEGER");
+            assertColumnEquals(rs, "newField", 4, "DOUBLE PRECISION");
             assertFalse(rs.next());
         }
     }
 
     @Test
     public void testAddColumnToExistingTable() throws Exception {
-        try (final Connection conn = service.getConnection()) {
+        try (final Connection conn = getConnection()) {
             try (final Statement stmt = conn.createStatement()) {
                 stmt.executeUpdate(createPersons);
             }
@@ -180,7 +137,7 @@ public class TestUpdateDatabaseTable {
             readerFactory.addSchemaField(new RecordField("id", RecordFieldType.INT.getDataType(), false));
             readerFactory.addSchemaField(new RecordField("name", RecordFieldType.STRING.getDataType(), true));
             readerFactory.addSchemaField(new RecordField("code", RecordFieldType.INT.getDataType(), 0, true));
-            readerFactory.addSchemaField(new RecordField("newField", RecordFieldType.STRING.getDataType(), 0, true));
+            readerFactory.addSchemaField(new RecordField("newField", RecordFieldType.DOUBLE.getDataType(), false));
             readerFactory.addRecord(1, "name1", null, "test");
 
             runner.addControllerService("mock-reader-factory", readerFactory);
@@ -191,46 +148,27 @@ public class TestUpdateDatabaseTable {
             runner.setProperty(UpdateDatabaseTable.CREATE_TABLE, UpdateDatabaseTable.FAIL_IF_NOT_EXISTS);
             runner.setProperty(UpdateDatabaseTable.QUOTE_TABLE_IDENTIFIER, "true");
             runner.setProperty(UpdateDatabaseTable.QUOTE_COLUMN_IDENTIFIERS, "false");
-            runner.setProperty(UpdateDatabaseTable.DB_TYPE, new DerbyDatabaseAdapter().getName());
-            runner.addControllerService("dbcp", service);
-            runner.enableControllerService(service);
-            runner.setProperty(UpdateDatabaseTable.DBCP_SERVICE, "dbcp");
+            runner.setProperty(UpdateDatabaseTable.DB_TYPE, TEST_DB_TYPE);
+
+            final String tableName = "persons";
             Map<String, String> attrs = new HashMap<>();
             attrs.put("db.name", "default");
-            attrs.put("table.name", "persons");
+            attrs.put("table.name", tableName);
             runner.enqueue(new byte[0], attrs);
             runner.run();
 
             runner.assertTransferCount(UpdateDatabaseTable.REL_SUCCESS, 1);
-            final MockFlowFile flowFile = runner.getFlowFilesForRelationship(UpdateDatabaseTable.REL_SUCCESS).get(0);
-            flowFile.assertAttributeEquals(UpdateDatabaseTable.ATTR_OUTPUT_TABLE, "persons");
-            // Verify the table has been updated with the expected field(s)
-            try (Statement s = conn.createStatement()) {
-                // The Derby equivalent of DESCRIBE TABLE (using a query rather than the ij tool)
-                ResultSet rs = s.executeQuery("SELECT * FROM SYS.SYSCOLUMNS WHERE referenceid = (SELECT tableid FROM SYS.SYSTABLES WHERE tablename = 'persons') ORDER BY columnnumber");
-                assertTrue(rs.next());
-                // Columns 2,3,4 are Column Name, Column Index, and Column Type
-                assertEquals("id", rs.getString(2));
-                assertEquals(1, rs.getInt(3));
-                // Primary key cannot be null, Derby stores that in this column
-                assertEquals("INTEGER NOT NULL", rs.getString(4));
+            final MockFlowFile flowFile = runner.getFlowFilesForRelationship(UpdateDatabaseTable.REL_SUCCESS).getFirst();
+            flowFile.assertAttributeEquals(UpdateDatabaseTable.ATTR_OUTPUT_TABLE, tableName);
 
-                assertTrue(rs.next());
-                assertEquals("name", rs.getString(2));
-                assertEquals(2, rs.getInt(3));
-                assertEquals("VARCHAR(100)", rs.getString(4));
-
-                assertTrue(rs.next());
-                assertEquals("code", rs.getString(2));
-                assertEquals(3, rs.getInt(3));
-                assertEquals("INTEGER", rs.getString(4));
-
-                assertTrue(rs.next());
-                assertEquals("NEWFIELD", rs.getString(2));
-                assertEquals(4, rs.getInt(3));
-                assertEquals("VARCHAR(100)", rs.getString(4));
-
-                // No more rows
+            try (
+                    Statement s = getConnection().createStatement();
+                    ResultSet rs = getTableColumns(s, tableName)
+            ) {
+                assertColumnEquals(rs, "id", 1, "INTEGER");
+                assertColumnEquals(rs, "name", 2, "CHARACTER VARYING");
+                assertColumnEquals(rs, "code", 3, "INTEGER");
+                assertColumnEquals(rs, "NEWFIELD", 4, "DOUBLE PRECISION");
                 assertFalse(rs.next());
             }
         }
@@ -238,7 +176,7 @@ public class TestUpdateDatabaseTable {
 
     @Test
     public void testAddExistingColumnTranslateFieldNames() throws Exception {
-        try (final Connection conn = service.getConnection()) {
+        try (final Connection conn = getConnection()) {
             try (final Statement stmt = conn.createStatement()) {
                 stmt.executeUpdate(createPersons);
             }
@@ -259,41 +197,25 @@ public class TestUpdateDatabaseTable {
             runner.setProperty(UpdateDatabaseTable.TRANSLATE_FIELD_NAMES, "true");
             runner.setProperty(UpdateDatabaseTable.QUOTE_TABLE_IDENTIFIER, "true");
             runner.setProperty(UpdateDatabaseTable.QUOTE_COLUMN_IDENTIFIERS, "false");
-            runner.setProperty(UpdateDatabaseTable.DB_TYPE, new DerbyDatabaseAdapter().getName());
-            runner.addControllerService("dbcp", service);
-            runner.enableControllerService(service);
-            runner.setProperty(UpdateDatabaseTable.DBCP_SERVICE, "dbcp");
+
+            final String tableName = "persons";
             Map<String, String> attrs = new HashMap<>();
             attrs.put("db.name", "default");
-            attrs.put("table.name", "persons");
+            attrs.put("table.name", tableName);
             runner.enqueue(new byte[0], attrs);
             runner.run();
 
             runner.assertTransferCount(UpdateDatabaseTable.REL_SUCCESS, 1);
-            final MockFlowFile flowFile = runner.getFlowFilesForRelationship(UpdateDatabaseTable.REL_SUCCESS).get(0);
-            flowFile.assertAttributeEquals(UpdateDatabaseTable.ATTR_OUTPUT_TABLE, "persons");
-            // Verify the table has been updated with the expected field(s)
-            try (Statement s = conn.createStatement()) {
-                // The Derby equivalent of DESCRIBE TABLE (using a query rather than the ij tool)
-                ResultSet rs = s.executeQuery("SELECT * FROM SYS.SYSCOLUMNS WHERE referenceid = (SELECT tableid FROM SYS.SYSTABLES WHERE tablename = 'persons') ORDER BY columnnumber");
-                assertTrue(rs.next());
-                // Columns 2,3,4 are Column Name, Column Index, and Column Type
-                assertEquals("id", rs.getString(2));
-                assertEquals(1, rs.getInt(3));
-                // Primary key cannot be null, Derby stores that in this column
-                assertEquals("INTEGER NOT NULL", rs.getString(4));
+            final MockFlowFile flowFile = runner.getFlowFilesForRelationship(UpdateDatabaseTable.REL_SUCCESS).getFirst();
+            flowFile.assertAttributeEquals(UpdateDatabaseTable.ATTR_OUTPUT_TABLE, tableName);
 
-                assertTrue(rs.next());
-                assertEquals("name", rs.getString(2));
-                assertEquals(2, rs.getInt(3));
-                assertEquals("VARCHAR(100)", rs.getString(4));
-
-                assertTrue(rs.next());
-                assertEquals("code", rs.getString(2));
-                assertEquals(3, rs.getInt(3));
-                assertEquals("INTEGER", rs.getString(4));
-
-                // No more rows
+            try (
+                    Statement s = conn.createStatement();
+                    ResultSet rs = getTableColumns(s, tableName)
+            ) {
+                assertColumnEquals(rs, "id", 1, "INTEGER");
+                assertColumnEquals(rs, "name", 2, "CHARACTER VARYING");
+                assertColumnEquals(rs, "code", 3, "INTEGER");
                 assertFalse(rs.next());
             }
         }
@@ -301,16 +223,16 @@ public class TestUpdateDatabaseTable {
 
     @Test
     public void testAddExistingColumnNoTranslateFieldNames() throws Exception {
-        try (final Connection conn = service.getConnection()) {
+        try (final Connection conn = getConnection()) {
             try (final Statement stmt = conn.createStatement()) {
                 stmt.executeUpdate(createPersons);
-                stmt.execute("ALTER TABLE \"persons\" ADD COLUMN \"ID\" INTEGER");
+                stmt.execute("ALTER TABLE \"persons\" ADD COLUMN \"ID\" DOUBLE");
             }
 
             MockRecordParser readerFactory = new MockRecordParser();
 
             readerFactory.addSchemaField(new RecordField("ID", RecordFieldType.INT.getDataType(), false));
-            readerFactory.addSchemaField(new RecordField("NAME", RecordFieldType.STRING.getDataType(), true));
+            readerFactory.addSchemaField(new RecordField("FRACTIONAL", RecordFieldType.DOUBLE.getDataType(), true));
             readerFactory.addSchemaField(new RecordField("code", RecordFieldType.INT.getDataType(), 0, true));
             readerFactory.addRecord(1, "name1", null, "test");
 
@@ -323,51 +245,28 @@ public class TestUpdateDatabaseTable {
             runner.setProperty(UpdateDatabaseTable.TRANSLATE_FIELD_NAMES, "false");
             runner.setProperty(UpdateDatabaseTable.QUOTE_TABLE_IDENTIFIER, "true");
             runner.setProperty(UpdateDatabaseTable.QUOTE_COLUMN_IDENTIFIERS, "false");
-            runner.setProperty(UpdateDatabaseTable.DB_TYPE, new DerbyDatabaseAdapter().getName());
-            runner.addControllerService("dbcp", service);
-            runner.enableControllerService(service);
-            runner.setProperty(UpdateDatabaseTable.DBCP_SERVICE, "dbcp");
+            runner.setProperty(UpdateDatabaseTable.DB_TYPE, TEST_DB_TYPE);
+
+            final String tableName = "persons";
             Map<String, String> attrs = new HashMap<>();
             attrs.put("db.name", "default");
-            attrs.put("table.name", "persons");
+            attrs.put("table.name", tableName);
             runner.enqueue(new byte[0], attrs);
             runner.run();
 
             runner.assertTransferCount(UpdateDatabaseTable.REL_SUCCESS, 1);
-            final MockFlowFile flowFile = runner.getFlowFilesForRelationship(UpdateDatabaseTable.REL_SUCCESS).get(0);
-            flowFile.assertAttributeEquals(UpdateDatabaseTable.ATTR_OUTPUT_TABLE, "persons");
-            // Verify the table has been updated with the expected field(s)
-            try (Statement s = conn.createStatement()) {
-                // The Derby equivalent of DESCRIBE TABLE (using a query rather than the ij tool)
-                ResultSet rs = s.executeQuery("SELECT * FROM SYS.SYSCOLUMNS WHERE referenceid = (SELECT tableid FROM SYS.SYSTABLES WHERE tablename = 'persons') ORDER BY columnnumber");
-                assertTrue(rs.next());
-                // Columns 2,3,4 are Column Name, Column Index, and Column Type
-                assertEquals("id", rs.getString(2));
-                assertEquals(1, rs.getInt(3));
-                // Primary key cannot be null, Derby stores that in this column
-                assertEquals("INTEGER NOT NULL", rs.getString(4));
+            final MockFlowFile flowFile = runner.getFlowFilesForRelationship(UpdateDatabaseTable.REL_SUCCESS).getFirst();
+            flowFile.assertAttributeEquals(UpdateDatabaseTable.ATTR_OUTPUT_TABLE, tableName);
 
-                assertTrue(rs.next());
-                assertEquals("name", rs.getString(2));
-                assertEquals(2, rs.getInt(3));
-                assertEquals("VARCHAR(100)", rs.getString(4));
-
-                assertTrue(rs.next());
-                assertEquals("code", rs.getString(2));
-                assertEquals(3, rs.getInt(3));
-                assertEquals("INTEGER", rs.getString(4));
-
-                assertTrue(rs.next());
-                assertEquals("ID", rs.getString(2));
-                assertEquals(4, rs.getInt(3));
-                assertEquals("INTEGER", rs.getString(4));
-
-                assertTrue(rs.next());
-                assertEquals("NAME", rs.getString(2));
-                assertEquals(5, rs.getInt(3));
-                assertEquals("VARCHAR(100)", rs.getString(4));
-
-                // No more rows
+            try (
+                    Statement s = conn.createStatement();
+                    ResultSet rs = getTableColumns(s, tableName)
+            ) {
+                assertColumnEquals(rs, "id", 1, "INTEGER");
+                assertColumnEquals(rs, "name", 2, "CHARACTER VARYING");
+                assertColumnEquals(rs, "code", 3, "INTEGER");
+                assertColumnEquals(rs, "ID", 4, "DOUBLE PRECISION");
+                assertColumnEquals(rs, "FRACTIONAL", 5, "DOUBLE PRECISION");
                 assertFalse(rs.next());
             }
         }
@@ -375,7 +274,7 @@ public class TestUpdateDatabaseTable {
 
     @Test
     public void testAddColumnToExistingTableUpdateFieldNames() throws Exception {
-        try (final Connection conn = service.getConnection()) {
+        try (final Connection conn = getConnection()) {
             try (final Statement stmt = conn.createStatement()) {
                 stmt.executeUpdate(createPersons);
             }
@@ -385,7 +284,7 @@ public class TestUpdateDatabaseTable {
             readerFactory.addSchemaField(new RecordField("id", RecordFieldType.INT.getDataType(), false));
             readerFactory.addSchemaField(new RecordField("name", RecordFieldType.STRING.getDataType(), true));
             readerFactory.addSchemaField(new RecordField("code", RecordFieldType.INT.getDataType(), 0, true));
-            readerFactory.addSchemaField(new RecordField("newField", RecordFieldType.STRING.getDataType(), 0, true));
+            readerFactory.addSchemaField(new RecordField("newField", RecordFieldType.DOUBLE.getDataType(), 0, true));
             readerFactory.addRecord(1, "name1", null, "test");
 
             runner.addControllerService("mock-reader-factory", readerFactory);
@@ -397,16 +296,13 @@ public class TestUpdateDatabaseTable {
             runner.setProperty(UpdateDatabaseTable.QUOTE_TABLE_IDENTIFIER, "true");
             runner.setProperty(UpdateDatabaseTable.QUOTE_COLUMN_IDENTIFIERS, "false");
             runner.setProperty(UpdateDatabaseTable.UPDATE_FIELD_NAMES, "true");
+            runner.setProperty(UpdateDatabaseTable.DB_TYPE, TEST_DB_TYPE);
 
             MockRecordWriter writerFactory = new MockRecordWriter();
             runner.addControllerService("mock-writer-factory", writerFactory);
             runner.enableControllerService(writerFactory);
             runner.setProperty(UpdateDatabaseTable.RECORD_WRITER_FACTORY, "mock-writer-factory");
 
-            runner.setProperty(UpdateDatabaseTable.DB_TYPE, new DerbyDatabaseAdapter().getName());
-            runner.addControllerService("dbcp", service);
-            runner.enableControllerService(service);
-            runner.setProperty(UpdateDatabaseTable.DBCP_SERVICE, "dbcp");
             Map<String, String> attrs = new HashMap<>();
             attrs.put("db.name", "default");
             attrs.put("table.name", "persons");
@@ -414,7 +310,7 @@ public class TestUpdateDatabaseTable {
             runner.run();
 
             runner.assertTransferCount(UpdateDatabaseTable.REL_SUCCESS, 1);
-            final MockFlowFile flowFile = runner.getFlowFilesForRelationship(UpdateDatabaseTable.REL_SUCCESS).get(0);
+            final MockFlowFile flowFile = runner.getFlowFilesForRelationship(UpdateDatabaseTable.REL_SUCCESS).getFirst();
             // Ensure the additional field is written out to the FlowFile
             flowFile.assertContentEquals("\"1\",\"name1\",\"0\",\"test\"\n");
         }
@@ -422,8 +318,7 @@ public class TestUpdateDatabaseTable {
 
     @Test
     public void testCreateTableNonDefaultSchema() throws Exception {
-
-        try (final Connection conn = service.getConnection()) {
+        try (final Connection conn = getConnection()) {
             try (final Statement stmt = conn.createStatement()) {
                 stmt.executeUpdate(createSchema);
             }
@@ -445,75 +340,74 @@ public class TestUpdateDatabaseTable {
         runner.setProperty(UpdateDatabaseTable.CREATE_TABLE, UpdateDatabaseTable.CREATE_IF_NOT_EXISTS);
         runner.setProperty(UpdateDatabaseTable.QUOTE_TABLE_IDENTIFIER, "false");
         runner.setProperty(UpdateDatabaseTable.QUOTE_COLUMN_IDENTIFIERS, "true");
-        runner.setProperty(UpdateDatabaseTable.DB_TYPE, new DerbyDatabaseAdapter().getName());
-        runner.addControllerService("dbcp", service);
-        runner.enableControllerService(service);
-        runner.setProperty(UpdateDatabaseTable.DBCP_SERVICE, "dbcp");
+
+        final String tableName = "otherSchemaTable";
         Map<String, String> attrs = new HashMap<>();
         attrs.put("db.name", "default");
-        attrs.put("table.name", "newTable");
+        attrs.put("table.name", tableName);
         runner.enqueue(new byte[0], attrs);
         runner.run();
 
         runner.assertTransferCount(UpdateDatabaseTable.REL_SUCCESS, 1);
-        final MockFlowFile flowFile = runner.getFlowFilesForRelationship(UpdateDatabaseTable.REL_SUCCESS).get(0);
-        flowFile.assertAttributeEquals(UpdateDatabaseTable.ATTR_OUTPUT_TABLE, "newTable");
-        // Verify the table has been created with the expected fields
-        try (Statement s = service.getConnection().createStatement()) {
-            // The Derby equivalent of DESCRIBE TABLE (using a query rather than the ij tool)
-            ResultSet rs = s.executeQuery("select * from sys.syscolumns where referenceid = (select tableid from sys.systables "
-                    + "join sys.sysschemas on sys.systables.schemaid = sys.sysschemas.schemaid where tablename = 'NEWTABLE' and sys.sysschemas.schemaname = 'TESTSCHEMA') order by columnnumber");
-            assertTrue(rs.next());
-            // Columns 2,3,4 are Column Name, Column Index, and Column Type
-            assertEquals("id", rs.getString(2));
-            assertEquals(1, rs.getInt(3));
-            assertEquals("INTEGER NOT NULL", rs.getString(4));
+        final MockFlowFile flowFile = runner.getFlowFilesForRelationship(UpdateDatabaseTable.REL_SUCCESS).getFirst();
+        flowFile.assertAttributeEquals(UpdateDatabaseTable.ATTR_OUTPUT_TABLE, tableName);
 
-            assertTrue(rs.next());
-            assertEquals("name", rs.getString(2));
-            assertEquals(2, rs.getInt(3));
-            assertEquals("VARCHAR(100)", rs.getString(4));
-
-            assertTrue(rs.next());
-            assertEquals("code", rs.getString(2));
-            assertEquals(3, rs.getInt(3));
-            assertEquals("INTEGER", rs.getString(4));
-
-            assertTrue(rs.next());
-            assertEquals("newField", rs.getString(2));
-            assertEquals(4, rs.getInt(3));
-            assertEquals("VARCHAR(100)", rs.getString(4));
-
-            // No more rows
+        try (
+                Connection conn = getConnection();
+                Statement s = conn.createStatement();
+                ResultSet rs = getTableColumns(s, tableName.toUpperCase())
+        ) {
+            assertColumnEquals(rs, "id", 1, "INTEGER");
+            assertColumnEquals(rs, "name", 2, "CHARACTER VARYING");
+            assertColumnEquals(rs, "code", 3, "INTEGER");
+            assertColumnEquals(rs, "newField", 4, "CHARACTER VARYING");
             assertFalse(rs.next());
         }
     }
 
+    @Test
+    void testMigrateProperties() {
+        final Map<String, String> expectedRenamed = Map.ofEntries(
+                Map.entry("record-reader", UpdateDatabaseTable.RECORD_READER.getName()),
+                Map.entry("db-type", UpdateDatabaseTable.DB_TYPE.getName()),
+                Map.entry("updatedatabasetable-dbcp-service", UpdateDatabaseTable.DBCP_SERVICE.getName()),
+                Map.entry("updatedatabasetable-catalog-name", UpdateDatabaseTable.CATALOG_NAME.getName()),
+                Map.entry("updatedatabasetable-schema-name", UpdateDatabaseTable.SCHEMA_NAME.getName()),
+                Map.entry("updatedatabasetable-table-name", UpdateDatabaseTable.TABLE_NAME.getName()),
+                Map.entry("updatedatabasetable-create-table", UpdateDatabaseTable.CREATE_TABLE.getName()),
+                Map.entry("updatedatabasetable-primary-keys", UpdateDatabaseTable.PRIMARY_KEY_FIELDS.getName()),
+                Map.entry("updatedatabasetable-translate-field-names", UpdateDatabaseTable.TRANSLATE_FIELD_NAMES.getName()),
+                Map.entry("updatedatabasetable-update-field-names", UpdateDatabaseTable.UPDATE_FIELD_NAMES.getName()),
+                Map.entry("updatedatabasetable-record-writer", UpdateDatabaseTable.RECORD_WRITER_FACTORY.getName()),
+                Map.entry("updatedatabasetable-quoted-column-identifiers", UpdateDatabaseTable.QUOTE_COLUMN_IDENTIFIERS.getName()),
+                Map.entry("updatedatabasetable-quoted-table-identifiers", UpdateDatabaseTable.QUOTE_TABLE_IDENTIFIER.getName()),
+                Map.entry("updatedatabasetable-query-timeout", UpdateDatabaseTable.QUERY_TIMEOUT.getName())
+        );
 
-    /**
-     * Simple implementation only for testing purposes
-     */
-    private static class MockDBCPService extends AbstractControllerService implements DBCPService {
-        private final String dbLocation;
-
-        public MockDBCPService(final String dbLocation) {
-            this.dbLocation = dbLocation;
-        }
-
-        @Override
-        public String getIdentifier() {
-            return "dbcp";
-        }
-
-        @Override
-        public Connection getConnection() throws ProcessException {
-            try {
-                Class.forName("org.apache.derby.jdbc.EmbeddedDriver");
-                return DriverManager.getConnection("jdbc:derby:" + dbLocation + ";create=true");
-            } catch (final Exception e) {
-                throw new ProcessException("getConnection failed: " + e);
-            }
-        }
+        final PropertyMigrationResult propertyMigrationResult = runner.migrateProperties();
+        assertEquals(expectedRenamed, propertyMigrationResult.getPropertiesRenamed());
     }
 
+    private ResultSet getTableColumns(final Statement statement, final String tableName) throws SQLException {
+        return statement.executeQuery("""
+                    SELECT
+                      COLUMN_NAME,
+                      ORDINAL_POSITION,
+                      DATA_TYPE
+                    FROM
+                      INFORMATION_SCHEMA.COLUMNS
+                    WHERE
+                      TABLE_NAME = '%s'
+                    ORDER BY
+                      ORDINAL_POSITION
+                """.formatted(tableName)
+        );
+    }
+
+    private void assertColumnEquals(final ResultSet rs, final String columnName, final int position, final String dataType) throws SQLException {
+        assertTrue(rs.next(), "Row not found for column [%s]".formatted(columnName));
+        assertEquals(columnName, rs.getString(1));
+        assertEquals(position, rs.getInt(2));
+        assertEquals(dataType, rs.getString(3));
+    }
 }
