@@ -16,7 +16,6 @@
  */
 package org.apache.nifi.processors.standard;
 
-import org.apache.commons.io.IOUtils;
 import org.apache.nifi.controller.AbstractControllerService;
 import org.apache.nifi.json.schema.JsonSchema;
 import org.apache.nifi.json.schema.SchemaVersion;
@@ -36,21 +35,22 @@ import org.junit.jupiter.params.provider.MethodSource;
 import org.opentest4j.AssertionFailedError;
 
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.UncheckedIOException;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.Objects;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class TestValidateJson {
+    private static final Path RESOURCE_DIR = Paths.get("src/test/resources/TestValidateJson");
     private static final String JSON = getFileContent("simple-example.json");
     private static final String SIMPLE_SCHEMA = getFileContent("schema-simple-example.json");
     private static final String NON_JSON = "Not JSON";
@@ -62,7 +62,7 @@ class TestValidateJson {
         runner = TestRunners.newTestRunner(ValidateJson.class);
     }
 
-    @ParameterizedTest(name = "{2}")
+    @ParameterizedTest
     @MethodSource("customValidateArgs")
     void testCustomValidateMissingProperty(final ValidateJson.JsonSchemaStrategy strategy) {
         runner.setProperty(ValidateJson.SCHEMA_ACCESS_STRATEGY, strategy);
@@ -81,10 +81,7 @@ class TestValidateJson {
 
         runner.run();
 
-        runner.assertTransferCount(ValidateJson.REL_FAILURE, 0);
-        runner.assertTransferCount(ValidateJson.REL_INVALID, 0);
-        runner.assertTransferCount(ValidateJson.REL_VALID, 1);
-
+        runner.assertAllFlowFilesTransferred(ValidateJson.REL_VALID);
         assertValidationErrors(ValidateJson.REL_VALID, false);
         assertEquals(1, runner.getProvenanceEvents().size());
         assertEquals(ProvenanceEventType.ROUTE, runner.getProvenanceEvents().getFirst().getEventType());
@@ -99,10 +96,7 @@ class TestValidateJson {
 
         runner.run();
 
-        runner.assertTransferCount(ValidateJson.REL_FAILURE, 0);
-        runner.assertTransferCount(ValidateJson.REL_INVALID, 0);
-        runner.assertTransferCount(ValidateJson.REL_VALID, 1);
-
+        runner.assertAllFlowFilesTransferred(ValidateJson.REL_VALID);
         assertValidationErrors(ValidateJson.REL_VALID, false);
         assertEquals(1, runner.getProvenanceEvents().size());
         assertEquals(ProvenanceEventType.ROUTE, runner.getProvenanceEvents().getFirst().getEventType());
@@ -116,10 +110,7 @@ class TestValidateJson {
         runner.enqueue(JSON);
         runner.run();
 
-        runner.assertTransferCount(ValidateJson.REL_FAILURE, 0);
-        runner.assertTransferCount(ValidateJson.REL_INVALID, 0);
-        runner.assertTransferCount(ValidateJson.REL_VALID, 1);
-
+        runner.assertAllFlowFilesTransferred(ValidateJson.REL_VALID);
         assertValidationErrors(ValidateJson.REL_VALID, false);
         assertEquals(1, runner.getProvenanceEvents().size());
         assertEquals(ProvenanceEventType.ROUTE, runner.getProvenanceEvents().getFirst().getEventType());
@@ -134,10 +125,7 @@ class TestValidateJson {
         runner.enqueue(JSON);
         runner.run();
 
-        runner.assertTransferCount(ValidateJson.REL_FAILURE, 0);
-        runner.assertTransferCount(ValidateJson.REL_INVALID, 0);
-        runner.assertTransferCount(ValidateJson.REL_VALID, 1);
-
+        runner.assertAllFlowFilesTransferred(ValidateJson.REL_VALID);
         assertValidationErrors(ValidateJson.REL_VALID, false);
         assertEquals(1, runner.getProvenanceEvents().size());
         assertEquals(ProvenanceEventType.ROUTE, runner.getProvenanceEvents().getFirst().getEventType());
@@ -152,10 +140,7 @@ class TestValidateJson {
         runner.enqueue(JSON);
         runner.run();
 
-        runner.assertTransferCount(ValidateJson.REL_FAILURE, 0);
-        runner.assertTransferCount(ValidateJson.REL_INVALID, 1);
-        runner.assertTransferCount(ValidateJson.REL_VALID, 0);
-
+        runner.assertAllFlowFilesTransferred(ValidateJson.REL_INVALID);
         assertValidationErrors(ValidateJson.REL_INVALID, true);
         assertEquals(1, runner.getProvenanceEvents().size());
         assertEquals(ProvenanceEventType.ROUTE, runner.getProvenanceEvents().getFirst().getEventType());
@@ -170,10 +155,7 @@ class TestValidateJson {
         runner.enqueue(JSON);
         runner.run();
 
-        runner.assertTransferCount(ValidateJson.REL_FAILURE, 0);
-        runner.assertTransferCount(ValidateJson.REL_INVALID, 1);
-        runner.assertTransferCount(ValidateJson.REL_VALID, 0);
-
+        runner.assertAllFlowFilesTransferred(ValidateJson.REL_INVALID);
         assertValidationErrors(ValidateJson.REL_INVALID, true);
         assertEquals(1, runner.getProvenanceEvents().size());
         assertEquals(ProvenanceEventType.ROUTE, runner.getProvenanceEvents().getFirst().getEventType());
@@ -187,10 +169,7 @@ class TestValidateJson {
         runner.enqueue(NON_JSON);
         runner.run();
 
-        runner.assertTransferCount(ValidateJson.REL_FAILURE, 1);
-        runner.assertTransferCount(ValidateJson.REL_INVALID, 0);
-        runner.assertTransferCount(ValidateJson.REL_VALID, 0);
-
+        runner.assertAllFlowFilesTransferred(ValidateJson.REL_FAILURE);
         assertValidationErrors(ValidateJson.REL_FAILURE, false);
         assertEquals(1, runner.getProvenanceEvents().size());
         assertEquals(ProvenanceEventType.ROUTE, runner.getProvenanceEvents().getFirst().getEventType());
@@ -224,10 +203,7 @@ class TestValidateJson {
 
         runner.run();
 
-        runner.assertTransferCount(ValidateJson.REL_FAILURE, 0);
-        runner.assertTransferCount(ValidateJson.REL_INVALID, 0);
-        runner.assertTransferCount(ValidateJson.REL_VALID, 1);
-
+        runner.assertAllFlowFilesTransferred(ValidateJson.REL_VALID);
         assertValidationErrors(ValidateJson.REL_VALID, false);
     }
 
@@ -247,9 +223,33 @@ class TestValidateJson {
         runner.enqueue(JSON, attributes);
         runner.run();
 
-        runner.assertTransferCount(ValidateJson.REL_FAILURE, 0);
-        runner.assertTransferCount(ValidateJson.REL_INVALID, 0);
-        runner.assertTransferCount(ValidateJson.REL_VALID, 1);
+        runner.assertAllFlowFilesTransferred(ValidateJson.REL_VALID);
+    }
+
+    @ParameterizedTest
+    @MethodSource("multilineJsonArgs")
+     void testMultilineJsonWhereSecondLineInvalid(ValidateJson.InputFormat inputFormat, boolean expectedValid) {
+        final String multilineJson = """
+                {"FieldOne":"stringValue","FieldTwo":1234,"FieldThree":[{"arrayField":"arrayValue"}]}
+                {"FieldOne":"stringValue","FieldTwo":"NAN","FieldThree":[{"arrayField":"arrayValue"}]}
+                """;
+        runner.setProperty(ValidateJson.SCHEMA_CONTENT, SIMPLE_SCHEMA);
+        runner.setProperty(JsonSchemaRegistryComponent.SCHEMA_VERSION, SCHEMA_VERSION);
+        runner.setProperty(ValidateJson.INPUT_FORMAT, inputFormat.getValue());
+        runner.enqueue(multilineJson);
+
+        runner.run();
+
+        if (expectedValid) {
+            runner.assertAllFlowFilesTransferred(ValidateJson.REL_VALID);
+        } else {
+            runner.assertAllFlowFilesTransferred(ValidateJson.REL_INVALID);
+
+            assertTrue(runner.getLogger().getWarnMessages().stream()
+                    .anyMatch(logMessage -> logMessage.getMsg().contains("JSON at line 2") && logMessage.getMsg().contains("is invalid")));
+        }
+
+        runner.clearTransferState();
     }
 
     private void assertValidationErrors(Relationship relationship, boolean expected) {
@@ -265,29 +265,30 @@ class TestValidateJson {
 
     private static Stream<Arguments> customValidateArgs() {
         return Stream.of(
-                Arguments.of(ValidateJson.JsonSchemaStrategy.SCHEMA_NAME_PROPERTY, "requires that the JSON Schema Registry property be set"),
-                Arguments.of(ValidateJson.JsonSchemaStrategy.SCHEMA_CONTENT_PROPERTY, "requires that the JSON Schema property be set")
+                Arguments.argumentSet("Require JSON Schema Registry property to be set", ValidateJson.JsonSchemaStrategy.SCHEMA_NAME_PROPERTY),
+                Arguments.argumentSet("Require JSON Schema property to be set", ValidateJson.JsonSchemaStrategy.SCHEMA_CONTENT_PROPERTY)
+        );
+    }
+
+    private static Stream<Arguments> multilineJsonArgs() {
+        return Stream.of(
+                Arguments.argumentSet(ValidateJson.InputFormat.FLOW_FILE.getDisplayName(), ValidateJson.InputFormat.FLOW_FILE.getValue(), true),
+                Arguments.argumentSet(ValidateJson.InputFormat.JSON_LINES.getDisplayName(), ValidateJson.InputFormat.JSON_LINES.getValue(), false)
         );
     }
 
     private static String getFilePath(final String filename) {
-        final String path = getRelativeResourcePath(filename);
-        final URL url = Objects.requireNonNull(TestValidateJson.class.getResource(path), "Resource not found");
-        return url.getPath();
+        final Path path = RESOURCE_DIR.resolve(filename);
+        return path.toString();
     }
 
     private static String getFileContent(final String filename) {
-        final String path = getRelativeResourcePath(filename);
-        try (final InputStream inputStream = TestValidateJson.class.getResourceAsStream(path)) {
-            Objects.requireNonNull(inputStream, "Resource not found");
-            return IOUtils.toString(inputStream, StandardCharsets.UTF_8);
+        final Path path = RESOURCE_DIR.resolve(filename);
+        try {
+            return Files.readString(path);
         } catch (final IOException e) {
             throw new UncheckedIOException(e);
         }
-    }
-
-    private static String getRelativeResourcePath(final String filename) {
-        return String.format("/%s/%s", TestValidateJson.class.getSimpleName(), filename);
     }
 
     private static class SampleJsonSchemaRegistry extends AbstractControllerService implements JsonSchemaRegistry {
