@@ -21,6 +21,7 @@ import org.apache.nifi.components.PropertyDescriptor;
 import org.apache.nifi.components.ValidationResult;
 import org.apache.nifi.controller.AbstractControllerService;
 import org.apache.nifi.controller.ControllerService;
+import org.apache.nifi.controller.ControllerServiceInitializationContext;
 import org.apache.nifi.flowfile.FlowFile;
 import org.apache.nifi.processor.AbstractProcessor;
 import org.apache.nifi.processor.ProcessContext;
@@ -28,12 +29,11 @@ import org.apache.nifi.processor.ProcessSession;
 import org.apache.nifi.processor.ProcessorInitializationContext;
 import org.apache.nifi.processor.Relationship;
 import org.apache.nifi.processor.exception.ProcessException;
+import org.apache.nifi.processor.metrics.CommitTiming;
 import org.apache.nifi.reporting.InitializationException;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -47,6 +47,9 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 
 public class TestStandardProcessorTestRunner {
+
+    private static final String NAMED_GAUGE = "Processing Time";
+    private static final double NAMED_GAUGE_VALUE = 120.35;
 
     @Test
     public void testProcessContextPassedToOnStoppedMethods() {
@@ -107,6 +110,19 @@ public class TestStandardProcessorTestRunner {
     }
 
     @Test
+    public void testRecordGauge() {
+        final RecordGaugeProcessor processor = new RecordGaugeProcessor();
+        final TestRunner runner = TestRunners.newTestRunner(processor);
+
+        runner.run();
+
+        final List<Double> gaugeValues = runner.getGaugeValues(NAMED_GAUGE);
+        assertFalse(gaugeValues.isEmpty());
+        final Double firstValue = gaugeValues.getFirst();
+        assertEquals(NAMED_GAUGE_VALUE, firstValue);
+    }
+
+    @Test
     public void testNumThreads() {
         final ProcessorWithOnStop proc = new ProcessorWithOnStop();
         final TestRunner runner = TestRunners.newTestRunner(proc);
@@ -156,8 +172,7 @@ public class TestStandardProcessorTestRunner {
 
     @Test
     public void testControllerServiceUpdateShouldCallOnSetProperty() {
-        // Arrange
-        final ControllerService testService = new SimpleTestService();
+        final SimpleTestService testService = new SimpleTestService();
         final AddAttributeProcessor proc = new AddAttributeProcessor();
         final TestRunner runner = TestRunners.newTestRunner(proc);
         final String serviceIdentifier = "test";
@@ -169,12 +184,10 @@ public class TestStandardProcessorTestRunner {
             fail(e.getMessage());
         }
 
-        assertFalse(((SimpleTestService) testService).isOpmCalled(), "onPropertyModified has been called");
+        assertFalse(testService.isOpmCalled(), "onPropertyModified has been called");
 
-        // Act
         ValidationResult vr = runner.setProperty(testService, pdName, pdValue);
 
-        // Assert
         assertTrue(vr.isValid());
 
         ControllerServiceConfiguration csConf = ((MockProcessContext) runner.getProcessContext()).getConfiguration(serviceIdentifier);
@@ -182,7 +195,7 @@ public class TestStandardProcessorTestRunner {
         String retrievedPDValue = csConf.getProperties().get(propertyDescriptor);
 
         assertEquals(pdValue, retrievedPDValue);
-        assertTrue(((SimpleTestService) testService).isOpmCalled(), "onPropertyModified has not been called");
+        assertTrue(testService.isOpmCalled(), "onPropertyModified has not been called");
     }
 
     @Test
@@ -218,6 +231,13 @@ public class TestStandardProcessorTestRunner {
         runner.enableControllerService(testService);
         runner.assertValid(testService);
         runner.assertValid();
+    }
+
+    private static class RecordGaugeProcessor extends AbstractProcessor {
+        @Override
+        public void onTrigger(final ProcessContext context, final ProcessSession session) {
+            session.recordGauge(NAMED_GAUGE, NAMED_GAUGE_VALUE, CommitTiming.NOW);
+        }
     }
 
     private static class ProcessorWithOnStop extends AbstractProcessor {
@@ -259,10 +279,7 @@ public class TestStandardProcessorTestRunner {
 
         @Override
         protected void init(final ProcessorInitializationContext context) {
-            final Set<Relationship> relationships = new HashSet<>();
-            relationships.add(REL_SUCCESS);
-            relationships.add(REL_FAILURE);
-            this.relationships = Collections.unmodifiableSet(relationships);
+            this.relationships = Set.of(REL_SUCCESS, REL_FAILURE);
         }
 
         @Override
@@ -298,10 +315,7 @@ public class TestStandardProcessorTestRunner {
         private final Set<Relationship> relationships;
 
         public GoodProcessor() {
-            final Set<Relationship> r = new HashSet<>();
-            r.add(REL_SUCCESS);
-            r.add(REL_FAILURE);
-            relationships = Collections.unmodifiableSet(r);
+            relationships = Set.of(REL_SUCCESS, REL_FAILURE);
         }
 
         @Override
@@ -319,8 +333,8 @@ public class TestStandardProcessorTestRunner {
     }
 
     private static class SimpleTestService extends AbstractControllerService {
-        private final String PD_NAME = "name";
-        private PropertyDescriptor namePropertyDescriptor = new PropertyDescriptor.Builder()
+        private static final String PD_NAME = "name";
+        private final PropertyDescriptor namePropertyDescriptor = new PropertyDescriptor.Builder()
                 .name(PD_NAME)
                 .displayName("Controller Service Name")
                 .required(false)
@@ -375,5 +389,33 @@ public class TestStandardProcessorTestRunner {
 
         assertTrue(msg.getMsg().contains("expected test error"));
         assertNotNull(msg.getThrowable());
+    }
+
+    @Test
+    public void testControllerServiceReceivesConfiguredForClusteringSetting() throws InitializationException {
+        final ClusterAwareTestService testService = new ClusterAwareTestService();
+        final AddAttributeProcessor proc = new AddAttributeProcessor();
+        final TestRunner runner = TestRunners.newTestRunner(proc);
+
+        assertFalse(testService.isConfiguredForClustering());
+
+        runner.setIsConfiguredForClustering(true);
+        runner.addControllerService("clusterService", testService);
+
+        assertTrue(testService.isConfiguredForClustering());
+    }
+
+    private static class ClusterAwareTestService extends AbstractControllerService {
+        private boolean configuredForClustering = false;
+
+        @Override
+        protected void init(final ControllerServiceInitializationContext context) {
+            // Capture the value during initialization
+            this.configuredForClustering = context.getNodeTypeProvider().isConfiguredForClustering();
+        }
+
+        public boolean isConfiguredForClustering() {
+            return configuredForClustering;
+        }
     }
 }
